*Empty MediaWiki Message*

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -134,6 +134,30 @@
 <big>ལོ་ངོ་བཞི་གི་རིང་ སྡེ་སྲིད་སྦེ་བཞུགས་ཏེ་ རྒྱལ་ཁབ་ལུ་ཕྱག་ལེགས་ཤོམ་ཞུ་ཡོད་པའི་ཤུལ་མ་ འཁྲུངས་ཡུལ་མང་སྡེ་སྦོན་སྦིས་དང་ཀྲོང་གསར་ཆོས་འཁོར་རབ་བརྟན་རྩེ་ལུ་སྦེ་ ཐུགས་དམ་ལུ་བརྩོན་ཏེ་བཞུགས་ནུག། སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་འདི་སྐུ་ན་རྒས་ཏེ་ སྐུ་ཚོ་རིངམོ་སྦེ་བཞུགས་ཡོད་རུང་ གཤགཧ་ཡོད་པའི་སྤྱི་ལོ་དང་ཟླ་ཚེས་ཚུ་ གཏན་འཁེལ་སྦེ་ཤེས་མ་ཚུགསཔ་པས།
 </big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གཉིས་པ་ངག་དབང་རྒྱལ་མཚན་གྱི་མཛད་རྣམ། ༼༡༧༤༠-༡༧༤༤༽ === 
+==== སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གཉིས་པ་ངག་དབང་རྒྱལ་མཚན་འདི་ སྦྱིས་སྨད་ཝང་འགྲམ་མདོར་ལུ་འཁྲུངས་ཡོདཔ་དང་ ཆུང་ཀུ་བསྒང་ལས་ ཆོས་ལུགས་གཉིས་ཀྱི་ཁྲིམས་ལུགས་དང་ གཞུང་ཞབས་ཀྱི་ཕྱག་ལཱ་ཚུ་ནང་སྦྱང་བརྩོན་མཛད་དེ་ ཁོ་ལུ་བློ་སྟོབས་་ཡོདཔ་ལས་ ཤུལ་ལས་ནུབ་བརྡ་ལིང་ཁའི་རྫོང་དཔོན་དང་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་ལུ་བཀལ་ཡོདཔ་ཨིན་པས།</big>  
+==== སྡེ་སྲིད་ཁྲི་ཀྱི་མཛད་སྒོ། ==== 
+<big>སྤྱི་ལོ་ ༡༧༤༠ གནམ་ལོ་ལྕགས་སྤྲེལ་གྱི་ལོ་ལུ་ སྡེ་སྲིད་བཅུ་གཅིག་པ་ཁུ་བོ་དཔལ་འབྱོར་མཆོག་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་བཞུགས་པའི་སྐབས་ སྡེ་སྲིད་ལས་་དགོངས་ཞུ་ཞིནམ་ལས་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་ག་ཡང་མེདཔ་ལས་ གཞུང་གི་དཔོན་ཁག་དང་མཁན་ཆེན་བསྟན་འཛིན་ནོར་བུ་ཚུ་ལུ་ ཐིམ་ཕུག་རྫོང་དཔོན་ངག་དབང་རྒྱལ་མཚན་གྱིས་བསྟུན་གྲོས་ཞུ་སྟེ་ སྤྱི་ལོ་ ༡༧༤༠ ལྕགས་སྤྲེལ་གྱི་དགུན་དུས་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གཉིས་པ་སྦེ་ཁྲི་མངའ་གསོལ་ཞུ་ནུག། 
+</big>
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛན་རྣམ། ====
+
+===== རྒྱལ་སྲས་འབྲུག་རྣམ་རྒྱལ་གིས་མངའ་གསོལ། =====
+<big>སྡེ་སྲིད་བཅུ་གཅིག་པ་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་གཞུང་ལུ་ཞུཝ་བཞིན་དུ་ རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུའི་ཡང་སྲིད་ རྒྱལ་སྲས་འབྲུག་སྒྲ་རྣམ་རྒྱལ་འདི་ སྤྱི་ལོ་ ༡༧༤༠ ལྕགས་སྤྲེལ་གྱི་ལོ་དེ་ནང་ བླ་མ་ཁྲི་པ་དྲུག་པ་སྦེ་མངའ་གསོལ་ཞུ་ཡོདཔ་དང་ མཚན་ཡང་ མི་ཕམ་་འབྲུག་སྒྲ་རྣམ་རྒྱལ་ཟེར་གསོལ་ནུག། དེ་མ་ཚད་ སྡེ་སྲིད་མཆོག་གིས་ རྒྱལ་སྲས་ཁྲི་ལུ་མངའ་གསོལ་རྟེན་འབྲེལ་མཛད་པའི་སྐབས་ ལྷོ་ཕྱོགས་ཀྱི་མི་སེར་ཚུ་ལུ་གསོར་ར་ཚུ་ཡང་གནང་ནུག།</big>
+===== འབྲུག་པ་ཀུན་ལེགས་ཀྱི་ཡང་སྲིད། =====
+<big>མཁན་ཆེན་ངག་དབང་ཕྲིན་ལས་ཀྱིས་ ཞབས་དྲུང་རིན་པོ་ཆེའི་ཆོས་རྒྱུན་གྱི་བཀའ་གནང་བའི་སྐབས་ འབྲུག་པ་ཀུན་ལེགས་ཀྱི་ཡང་སྲིད་གྲུབ་དབང་ཀུན་དགའ་མི་འགྱུར་རྡོ་རྗེ་ བོད་ལས་མར་ འབྲུག་ལུ་ཆོས་ཞུ་བར་འབྱོནམ་ད་ སྡེ་སྲིད་མཆོག་གིས་ཞབས་ཏོག་དང་སྦྱིན་བདག་མཛད་གནང་ནུག།</big> 
+
+===== བསྟན་འགྱུར་གསར་བཞེངས། =====
+<big>སྡེ་སྲིད་ངག་དབང་རྒྱལ་མཚན་གྱི་སྐབས་ འབྲུག་རྒྱལ་ཁབ་ནང་ བསྟན་བཅོས་ལུ་མཁས་པ་དང་བསྟན་འགྱུར་ཚུ་མེདཔ་མ་ཚད་ དར་ཁྱབ་ཡང་མ་འགྱོ་བས། སྡེ་སྲིད་ཀྱིས་བོད་ལུ་བྱོན་ཏེ་ བསྟན་བཅོས་ཚུ་སྐད་སྒྱུར་འབད་ཡོདཔ་དང་ འབྲུག་ལུ་ལྷོདཔ་ད་ རྟ་མགོ་བླམ་ཤཱཀྱ་རིན་ཆེན་དང་བླ་མ་ངག་དབང་ཀུན་དགའ་རྒྱ་མཚོ། རྗེ་ཡོན་ཏན་མཐའ་ཡས་ཚུ་ཀྱིས་ བསྟན་བཅོས་བསྒྱུར་ནི་དང་ཞུན་དག་འབད་ནི་ལུ་གྲོགས་རམ་མཛད་གནང་ནུག།</big>
+===== དགེ་བའི་ཕྱག་ལཱ་མཛད་ཡོདཔ། =====
+<big>སྡེ་སྲིད་མཆོག་ཀུན་སློང་བཟང་པོ་ཡོདཔ་ལས་ ཆོས་སྲིད་ཀྱི་ཕྱག་ལཱ་མང་རབས་ཅིག་གནང་ཡོདཔ་དང་ དེ་ནང་ལས་ གཙོ་བོ་གུ་རུ་མཚན་བརྒྱད་ཀྱི་སྐུ་གསེར་བཞེངས་གནང་ནུག།  བཀྲི་ཤིས་ཆོས་རྫོང་ནང་ མགོན་པོ་ལྕམ་དྲལ་གྱི་གསེར་སྐུ་ཚུ་བཞེངས་གནང་ཡོདཔ་དང་ གཞན་དགེ་བའི་ཕྱག་ལཱ་མང་རབས་ཅིག་མཛད་དེ་ རྒྱལ་ཁབ་ལུ་ཕན་འདེབས་མཛད་གནང་ནུག། </big> 
+==== སྡེ་སྲིད་ཀྱི་མཛད་པ་མཐའ་མ། ==== 
+<big>ཧེ་མ་སྡེ་སྲིད་བཅུ་གཅིག་པ་ ཁུ་བོ་དཔལ་འབྱོར་དགོངསམ་ཞུ་བའི་ཤུལ་ལུ་ སྡེ་སྲིད་བཅུ་གཉིས་པ་ངག་དབང་རྒྱལ་མཚན་གྱིས་འཁོན་འཛིན་བཞག་སྟེ་ སྤོ་རོ་དཔོན་སློབ་ཤེས་རབ་དབང་ཕྱུག་དང་རྫོང་དཔོན་དར་རྒྱར། ཡོངས་འཛིན་ངག་དབང་པད་དཀར། ཕྱོགས་ལས་རྣམ་རྒྱལ་གྱི་ཡང་སྲིད་ ཤཱཀྱ་བསྟན་འཛིན་ཚུ་ལུ་བཀའ་བཀྱོན་གནང་ཡོདཔ་མ་ཚད་ ཡང་སྲིད་ཀྱི་ཡོངས་འཛིན་ཡང་ ཡང་སྲིད་དང་གཅིག་ཁར་བཞུགས་མ་བཅུག་པར་ མཐའ་བཤུད་བཏང་ཡོདཔ་ལ་སོགས་པ་ མ་རུངས་པའི་ལཱ་ངན་འབད་བའི་རྐྱེན་གྱིས་ ཁོ་རའི་བསོད་ནམས་སྟབས་གཅིག་གུར་ཟད་འགྱོ་ཡོདཔ་ཨིན་མས། སྤྱི་ལོ་ ༡༧༤༤ ཤིང་བྱི་ལོ་གི་གནམ་དགུན་ཅིག་ནང་ དབང་འདུས་རྗོང་གི་མགོན་ཁང་ནང་ དགེ་འདུན་འདུས་ཚོགས་ཀྱིས་ བསྐང་བ་གནང་བའི་སྐབས་ སྡེ་སྲིད་མཆོག་རབ་གསལ་བ་གམ་ནང་བཞུགསཔ་ད་ བྱ་རོགས་གིས་སྐད་རྐྱབ་མི་དང་གཅིག་ཁར་ གཤོགཔ་བརྡབས་ཡོདཔ་ལ་སོགས་པ་ བཀའ་སྲུང་ཁྲོས་པའི་རྟགས་མཚན་ངན་པ་སྟོནམ་ལས་ སྡེ་སྲིད་མཆོག་གཟའ་གདོང་དང་ཕྱད་པའི་རྐྱེན་གྱིས་ གློ་བུར་དུ་གཤགས་སོ་ནུག།</big>
+
+
+
+
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
