*Empty MediaWiki Message*

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -155,6 +155,51 @@
 <big>ཧེ་མ་སྡེ་སྲིད་བཅུ་གཅིག་པ་ ཁུ་བོ་དཔལ་འབྱོར་དགོངསམ་ཞུ་བའི་ཤུལ་ལུ་ སྡེ་སྲིད་བཅུ་གཉིས་པ་ངག་དབང་རྒྱལ་མཚན་གྱིས་འཁོན་འཛིན་བཞག་སྟེ་ སྤོ་རོ་དཔོན་སློབ་ཤེས་རབ་དབང་ཕྱུག་དང་རྫོང་དཔོན་དར་རྒྱར། ཡོངས་འཛིན་ངག་དབང་པད་དཀར། ཕྱོགས་ལས་རྣམ་རྒྱལ་གྱི་ཡང་སྲིད་ ཤཱཀྱ་བསྟན་འཛིན་ཚུ་ལུ་བཀའ་བཀྱོན་གནང་ཡོདཔ་མ་ཚད་ ཡང་སྲིད་ཀྱི་ཡོངས་འཛིན་ཡང་ ཡང་སྲིད་དང་གཅིག་ཁར་བཞུགས་མ་བཅུག་པར་ མཐའ་བཤུད་བཏང་ཡོདཔ་ལ་སོགས་པ་ མ་རུངས་པའི་ལཱ་ངན་འབད་བའི་རྐྱེན་གྱིས་ ཁོ་རའི་བསོད་ནམས་སྟབས་གཅིག་གུར་ཟད་འགྱོ་ཡོདཔ་ཨིན་མས། སྤྱི་ལོ་ ༡༧༤༤ ཤིང་བྱི་ལོ་གི་གནམ་དགུན་ཅིག་ནང་ དབང་འདུས་རྗོང་གི་མགོན་ཁང་ནང་ དགེ་འདུན་འདུས་ཚོགས་ཀྱིས་ བསྐང་བ་གནང་བའི་སྐབས་ སྡེ་སྲིད་མཆོག་རབ་གསལ་བ་གམ་ནང་བཞུགསཔ་ད་ བྱ་རོགས་གིས་སྐད་རྐྱབ་མི་དང་གཅིག་ཁར་ གཤོགཔ་བརྡབས་ཡོདཔ་ལ་སོགས་པ་ བཀའ་སྲུང་ཁྲོས་པའི་རྟགས་མཚན་ངན་པ་སྟོནམ་ལས་ སྡེ་སྲིད་མཆོག་གཟའ་གདོང་དང་ཕྱད་པའི་རྐྱེན་གྱིས་ གློ་བུར་དུ་གཤགས་སོ་ནུག།</big>
 
 
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གསུམ་པ་ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་གི་མཛད་རྣམ། (༡༧༤༤-༡༧༦༣) ===
+==== སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མའི་མཛད་རྣམ། ==== 
+<big>རང་ལུགས་འདས་ལོ་ཞེ་བདུན་ རབ་འབྱུང་བཅུ་གཉིས་པ་སྤྱི་ལོ་ ༡༦༩༧ མེ་གླང་གི་ལོ་ལུ་ ཡབ་དབང་འདུས་ཕུན་ཚོགས་དང་ ཡུམ་རྫ་མ་སྲིད་ཐར་གཉིས་ཀྱིས་སྲས་ཆུང་ཤོས་སྦེ་ ཐིམ་ཕུག་རྗོང་ཁག་སྟོད་ཝང་མཁར་གསར་ཁ་ལུ་སྐུ་འཁྲུངས་ནུག། ཁོ་སྐུ་འཁྲུངམ་ད་ མཚན་སྲིད་ཐུབ་ཟེར་དར་ཁྱབ་ཡར་སོ་ནུག། དགུང་ལོ་ཉེར་ལྔའི་བར་ན་ དགེ་འདུན་གྱི་སྡེ་ནང་བཞུགས་ཡོདཔ་དང་ མཚན་ཤེས་རབ་དབང་ཕྱུག་ཟེར་གསོལ་ཡོདཔ་མ་ཚད་ སྤ་རོ་དཔོན་སློབ་ཡང་མཛད་ཡོདཔ་ལས་ མཚན་ལུ་སི་ཏུ་དང་སྤྱི་བླ་ཤེས་རབ་དབང་ཕྱུག་ཟེར་གསོལ་ནུག། སྡེ་སྲིད་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ ལྕོགས་གྲུབ་ཡོད་མི་ཅིག་ཨིནམ་དང་ སྡེ་སྲིད་བཅུ་གསུམ་པའི་ཁྲི་ཐོག་ལུ་འབྱོན་པའི་སྐབས་ ཕྱག་ལཱ་ཚུ་ལེགས་ཤོམ་སྦེ་མཛད་ཡོདཔ་ལས་ མཚན་ཆོས་རྒྱལ་ཟེར་དར་ཁྱབ་སོང་ཡོདཔ་ལས་ ཤུལ་ལས་ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་ཟེར་གསོལ་ནུག། ལོ་གྲངས་ ༡༨ ཀྱི་རིང་ གྲཱ་ཚང་ནང་སྐུ་ཡོན་ཚུ་སྦྱངས་ཏེ་ དབང་ལུང་ཆོས་ཀྱི་བདུད་རྩི་ཚུ་ལུ་སྦྱང་བརྩོན་མཛད་ཡོདཔ་དང་ སྡེ་སྲིད་མཆོག་སྐུ་ན་ཆུང་ཀུ་བསྒང་ལས་འགྲན་ཟླ་འབད་མ་ཚུགས་པའི་ཕྱག་ལཱ་ཚུ་གནང་ཡོདཔ་ལས་ ཤུལ་ལས་ལྕོགས་གྲུབ་ལུ་གཟིགས་ཏེ་ ཀྲོང་གསར་རྗོང་དང་དབང་འདུས་ཕོ་བྲང་རྗོང་ཚུ་ནང་མགྲོན་གཉེར་སྦེ་ཕྱག་ཞུ་ནུག།</big> 
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གྱི་མཛད་སྒོ། ==== 
+<big>སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གཉིས་པ་ངག་དབང་རྒྱལ་མཚན་མཆོག་ སྤྱི་ལོ་ ༡༧༤༤ ཤིང་བྱི་གི་ལོ་ལུ་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་བཞུགས་པའི་སྐབས་གཤགས་མི་ལུ་བརྟེན་ཏེ་ སྤོ་རོ་དཔོན་སློབ་ཤེས་རབ་དབང་ཕྱུག་མཆོག་ བླ་མ་ཁྲི་པ་རྒྱལ་སྲས་འབྲུག་སྒྲ་རྣམ་རྒྱལ་དང་ མཁན་ཆེན་བསྟན་འཛིན་ནོར་བུ་ཚུ་གིས་ ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་འདི་ འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གསུམ་པ་སྦེ་ གདན་ས་སྤུ་ན་ཁ་ལུ་ཁྲི་མངའ་གསོལ་ཞུ་ནུག། ཁྲི་མངའ་གསོལ་གྱི་དགའ་སྟོན་བརྩི་སྲུང་གི་སྐབས་ བཀྲ་ཤིས་ལེགས་དར་ཕུལ་བར་འབྲུག་མི་མ་ཚད་ རྒྱལ་ཁབ་གཞན་ བོད་དང་རྒྱ་ནག། རྒྱ་གར་ཚུ་ལས་སྐུ་ཚབ་ཚུ་གིས་ སྡེ་སྲིད་མཆོག་ལུ་བཀྲ་ཤིས་ལེགས་དར་ཕུལ་བར་བྱོན་ནུག། སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་རྣམ།</big> 
+
+===== མཁན་ཆེན་ཁྲི་རབས་དགུ་པ། =====
+<big>གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་ཕེབས་པའི་ཤུལ་མ་ སྤྱི་ལོ་ ༡༧༤༤ ཤིང་བྱི་གི་ལོ་ནང་ མཁན་ཆེན་ཁྲི་རབས་བརྒྱད་པ་བསྟན་འཛིན་ནོར་བུ་དགོངས་ཞུ་མཛདཔ་ལས་ བླམ་ཁྲི་པ་འབྲུག་སྒྲ་རྣམ་རྒྱལ་དང་ གྲཱ་ཚང་འདུས་དམངས་ཀྱིས་རྟ ་མགོ་བླམ་ཤཱཀྱ་རིན་ཆེན་མཆོག་མཁན་ཆེན་ཁྲི་རབས་དགུ་པ་སྦེ་ ས་གནས་ཐིམ་ཕུག་བཀྲ་ཤིས་ཆོས་རྗོང་ལུ་སྦེ་ བཀྲ་ཤིས་མངའ་གསོལ་མཛད་ནུག།</big>
+===== ཞབས་དྲུང་རིན་པོ་ཆེའི་ཡང་སྲིད། =====
+<big>སྡེ་སྲིད་བཅུ་གཉིས་པ་ངག་དབང་རྒྱལ་མཚན་གྱིས་ གཞུང་གི་ངོ་ལོགཔ་ཚུ་ལུ་འཁོན་ཞུགས་ཏེ་ ཞབས་དྲུང་གི་ཡང་སྲིད་ ཤཱཀྱ་བསྟན་འཛིན་གྱི་ཡོངས་འཛིན་ཆོས་རྗེ་ངག་དབང་པད་དཀར་འདི་ སྐུ་ན་ཆུང་ཀུ་ལས་ བདག་འཛིན་མ་འབད་བར་བཞགཔ་ལས་ སྡེ་སྲིད་མཆོག་གིས་གྲཱ་ཚང་ནང་ གདན་འདྲེན་ཞུ་སྟེ་ སྐུ་ཡོན་ཚུ་གཟིགས་ཡོདཔ་ལས་ ཤུལ་ལས་སྡེ་སྲིད་མཆོག་གིས་ཡང་སྲིད་ ཤཱཀྱ་བསྟན་འཛིན་མཆོག་ སྟག་ཚང་བླམ་སྦེ་བསྐོ་བཞག་གནང་ནུག། ད་རུང་ ཆོས་རྗེ་ངག་དབང་པད་དཀར་འདི་ དར་དཀར་རྗོང་ཁག་ནང་གཡུས་བཏོན་ཏེ་བཞག་མི་འདི་ ལོག་སྟེ་གཞུང་ལུ་གདན་འདྲེན་ཞུ་ཡོདཔ་དང་ མགོན་པ་མང་རབས་ཅིག་ནང་ ཞབས་ཏོག་ཚུ་བསྒྲུབས་གནང་ནུག།</big>
+===== ཞབས་དྲུང་ཐུགས་སྤྲུལ་འབྲུག་ལུ་གདན་འདྲེན་ཞུ་ཡོདཔ། =====
+<big>ཞབས་དྲུང་ཐུགས་སྤྲུལ་དཔལ་འཇིགས་མེད་གྲགས་པ་ སྤྱི་ལོ་ ༡༧༢༤ ཤིང་འབྲུག་ལུ་བོད་གཡོ་རུ་གྲྭ་ནང་སྐུ་འཁྲུངས་ནུག། ཕྱོགས་ལས་རྣམ་རྒྱལ་ཞབས་དྲུང་གསུང་སྤྲུལ་གཉིས་དང་ གོང་ས་མི་ཕམ་དབང་པོ། མཁན་ཆེན་ངག་དབང་ཕྲིན་ལས་ཚུ་གིས་ བོད་གཞུང་དང་གཅིག་ཁར་གསུང་གྲོས་མང་རབས་ཅིག་གནང་ཡོད་རུང་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་མཆོག་ འབྲུག་ལུང་པ་ལུ་གདན་འདྲེན་ཞུ་མ་ཚུགས་པས། ཨིན་རུང་ སྡེ་སྲིད་བཅུ་གསུམ་པ་ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་དང་ མཁན་ཆེན་ཤཱཀྱ་རིན་ཆེན་མཆོག་གིས་ ཞབས་དྲུང་རིན་པོ་ཆེའི་ཐུགས་སྤྲུལ་དང་གསུང་སྤྲུལ་ཚུ་ སྤྱི་ལོ་ ༡༧༤༦ མེ་སྟག་ཟླཝ་ ༦ པའི་ཚེས་ ༤ ལུ་ འབྲུག་གི་རྒྱལ་ས་ལྟེ་བ་ ཐིམ་ཕུག་ལུ་གདན་འདྲེན་ཞུ་ནུག།</big>
+===== ཞབས་དྲུང་གི་ཡང་སྲིད་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ཡོདཔ། =====
+<big>ཞབས་དྲུང་གི་ཡང་སྲིད་དཔལ་འཇིགས་མེད་གྲགས་པ་མཆོག་ སྤྱི་ལོ་ ༡༧༤༧ མེ་ཡོས་ཀྱི་ལོ་ལུ་ ཞབས་དྲུང་རིན་པོ་ཆེའི་ཁྲི་མངའ་གསོལ་དང་། རྒྱལ་སྲས་འབྲུག་རྣམ་རྒྱལ་ཡང་ བླམ་ཁྲི་པ་བདུན་པ་སྦེ་ཁྲི་མངའ་གསོལ་ཞུ་ཡོདཔ་ཨིན་མས། ཉིནམ་འདི་བརྩི་སྲུང་ཞུ་ནི་དོན་ལུ་ འཇིག་རྟེན་དབང་ཕྱུག་འབུམ་དང་ གསོལ་འདེབས་ལེའུ་བདུན་མ་ཚུ་ཡང་བསྒྲུབས་གནང་ནུག།</big>
+===== རྒྱལ་ཁབ་ནང་གི་སྐུ་རིམ། =====
+<big>རྒྱལ་ཁབ་ཞི་བདེ་གི་ངང་ལུ་སྐྱོང་ཐབས་དང་ རྐྱེན་བར་ཆད་ཚུ་ཞི་ཐབས་ལུ་ སྤྱི་ལོ་ ༡༧༤༩ གི་ལོ་ནང་ སྐུ་རིམ་བཀའ་འགྱུར་ཚར་ ༦༡ དང་ བསྟན་འགྱུར་ཚར་ ༦ ལྷག་ཡོདཔ་མ་ཚད་ སྤྱི་ལོ་ ༡༧༤༡ ལོ་ནང་ བདེ་མཆོག་བསྙེན་པ་དུང་ཕྱུར་ཡང་བསྒྲུབས་གནང་ནུག། སྤྱི་ལོ་ ༡༧༥༨ ལས་ ༡༧༦༧ ཚུན་ ལོ་རེ་ནང་ བཀའ་འགྱུར་ཚར་ ༢ རེ་དང་། བླམ་མཆོདཔ་ཚར་ ༡༠ རེ། ལྷ་མོ་ཉིནམ་ ༢ རེ་མ་ཆད་པར་གནང་ནི་སྲོལ་འགོ་བཙུགས་ནུག།</big>
+===== མཁན་ཆེན་ཁྲི་རབས་བཅུ་པ་ཁྲི་མངའ་གསོལ། ===== 
+<big>མཁན་ཆེན་ཁྲི་རབས་དགུ་པ་རྒྱལ་བ་ཤཱཀྱ་རིན་ཆེན་མཆོག་ སྤྱི་ལོ་ ༡༧༥༥ ཤིང་ཕག་གི་ལོ་ལུ་དགོངས་ཞུ་བའི་ཚོ་ རྡོ་རྗེ་སློབ་དཔོན་པན་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་མཆོག་ མཁན་ཆེན་ཁྲི་རབས་བཅུ་པའི་ཁྲི་མངའ་གསོལ་གྱི་དགའ་སྟོན་བརྩི་སྲུང་ཞུ་གནང་ནུག།</big> 
+===== མི་སེར་གྱི་སྐྱིད་སྡུག། =====
+<big>སྡེ་སྲིད་འདི་ རྒྱལ་ཁབ་ཀྱི་དབུ་ཁྲིད་དང་ མི་སེར་གྱི་སྐྱིད་སྡུག་གཟིགས་མི་ཅིག་ཨིནམ་ལས་ སྐྱིད་སྡུག་མང་རབས་ཅིག་གཟིགས་ཡོདཔ་ཨིན་མས། དང་པ་ར་ སྤྱི་ལོ་ ༡༧༥༥ ཤིང་ཕག་གི་ལོ་ནང་ ཤར་ཝང་སྤ་གསུམ་གྱི་མི་སེར་དཔའ་རྩལཔ་ཚུ་ལུ་ སྦུངས་སྒུལ་བརྒྱུག་ནི་འདི་ ཡངས་ཆག་བཏང་ནུག། གཉིས་པ་ སྤུ་ན་ཁའི་ཐང་ཆུ་འགོ་གི་ཆུ་བྱག་འདི་ ལོ་ཨ་རྟག་ར་མི་སེར་ཚུ་གིས་རྐྱབ་དགོ་དོ་ཡོདཔ་ལས་ སྡེ་སྲིད་མཆོག་གིས་ ལཱ་འདི་མི་སེར་ཚུ་ལུ་གླ་ཆ་སྤྲོད་ཏེ་ ལཱ་ཚུ་ཡངས་ཆག་བཏང་ནུག། གསུམ་པ་ དར་དཀར་པའི་དབང་བཞི་ལུ་བསྐྱལ་ཡོད་མི་འདི་ སྤུ་ན་ཁ་དང་ཐིམ་ཕུག་ལུ་སྐྱེལ་འཐུས་མཛད་གནང་ནུག།</big>
+===== སྡེ་སྲིད་གི་མཛད་པ་མཐའ་མ། =====
+<big>སྤྱི་ལོ་ ༡༧༦༣ ཆུ་ལུག་གི་ལོ་ལུ་ སྡེ་སྲིད་མཆོག་དགུང་ལོ་ ༦༧ བཞེསཔ་ད་ སྡེ་སྲིད་གྱི་ཁྲི་ལུ་དུས་ཡུན་ལོ་གྲངས་ ༢༠ བཞུགས་པའི་ཤུལ་ལས་ དགོངས་ཞུ་མཛད་ཡོདཔ་དང་། སྤོ་རོ་དཔོན་སློབ་འབྲུག་ཕུན་ཚོགས་མཆོག་ འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་བཅུ་བཞི་པ་སྦེ་་བསྐོས་པའི་ཤུལ་མ་ གདན་ས་སྤུ་ན་ཁ་ལུ་སྦེ་དགོངས་ཞུ་མཛད་གནང་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངས་ཞུའི་མཛད་པ། ====
+ 
+===== ཆོས་ཕྱོགས་ཀྱི་མཛད་པ། =====
+<big>སྡེ་སྲིད་མཆོག་དགོངསམ་ཞུ་བའི་ཤུལ་ལས་ གནམ་བྱཱར་ལུ་ཐིམ་ཕུག་ཀུན་གསལ་ཕོ་བྲང་ནང་དང་ གནམ་དགུན་ལུ་ བ་ལིང་རིན་ཆེན་ཁང་བཟང་ནང་བཞུགས་ཏེ་ དགེ་སྡིག་གིས་ཕྱག་ལཱ་ཚུ་སྤང་བླང་འབད་ནི་ལུ་བརྩོན་ཡོདཔ་མ་ཚད་ རྒྱལ་ཁབ་ནང་རྒྱལ་བའི་བཀའ་འགྱུར་ཚུ་གསར་བཞེངས་མཛད་ཡོདཔ་ཨིན་པས།</big> 
+===== མི་སེར་ལུ་ཕན་པའི་མཛད་པ། =====
+<big>སྡེ་སྲིད་མཆོག་དགོངས་བཞུགས་ཏེ་ བ་ལིང་རིན་ཆེན་ཁང་བཟང་ནང་བཞུགས་པའི་སྐབས་ བ་ལིང་རིན་ཆེན་ཁང་བཟང་འདི་ཁའི་ ཉེ་འདེབས་ཀྱི་ཆུ་གུར་ཟམ་བཙུགས་ཏེ་ མི་སེར་ཚུ་ཀྱི་དཀའ་ངལ་བསལ་ཡོདཔ་ཨིན་མས། སྨན་པ་ཚུ་གིས་ཐོབ་པར་དཀའ་བའི་སྨན་ཚུ་འཚོལ་ནི་ལུ་ གྲོགས་རམ་དང་སྦྱིན་པ་ཚུ་བཏང་ནུག། ད་རུང་ སྡེ་སྲིད་ཁྲི་རབས་བཅུ་བཞི་པ་འབྲུག་ཕུན་ཚོགས་མཆོག་ སྐུ་སྙུང་བའི་སྐབས་ སྐུ་རིམ་ཚུ་ཡང་གནང་ཡོདཔ་ཨིན་མས།</big>
+===== མཛད་པ་མཐའ་མ། =====
+<big>འབྲུག་སྡེ་སྲིད་བཅུ་བཞི་པ་འབྲུག་ཕུན་ཚོགས་མཆོག་ སྤྱི་ལོ་ ༡༧༦༥ ཤིང་མོ་བྱ་ལོ་ལུ་ དགོངས་པ་རྫོགསཔ་ད་ གཞུང་གྲྭ་ཚང་གི་སྡེ་སྲིད་བཅུ་གསུམ་པ་ ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་མཆོག་ ལོག་སྟེ་ར་སྡེ་སྲིད་མཛད་དགོ་པའི་གསོལཝ་བཏབ་ཡོད་རུང་ སྡེ་སྲིད་སྐུ་ན་རྒས་པའི་རྐྱེན་གྱིས་ ཞལ་གྱིས་མ་བཞེས་པས། ཨིན་རུང་ སྡེ་སྲིད་བཅོ་ལྔ་པ་འབྲུག་བསྟན་འཛིན་འདི་ སྤུ་ན་ཁ་ལུ་ཁྲི་མངའ་གསོལ་མཛད་པའི་སྐབས་ འཕགས་པའི་དགེ་འདུན་ལུ་བསྙེན་བཀུར་དང་ འཇིགས་དབང་འབུམ་ཐེར་གནང་ཡོདཔ་དང་ སྡེ་སྲིད་མཆོག་ རྒྱལ་ཁབ་ལུ་དུས་ཡུན་རིང་ཤོས་ལོ་གྲངས་ ༢༠ ཕྱག་ཞུ་བའི་ཤུལ་ལས་ སྤྱི་ལོ་ ༡༧༦༨ ས་བྱི་དགུང་ལོ་ ༧༢ བཞེསཔ་ད་གཤགས་་སོ་ནུག།</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅུ་བཞི་པ་འབྲུག་ཕུན་ཚོགས་ཀྱི་མཛད་རྣམ། ༼༡༧༦༣-༡༧༦༥༽ ===
+==== སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་ སྟོད་ཝང་ལུ་སྐུ་འཁྲུངས་ཏེ་ མཚན་ཡང་འབྲུག་ཕུན་ཚོགས་ཟེར་གསོལ་ནུག། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ དཔལ་ལྡན་འབྲུག་པའི་སྒྲིག་ལམ་དང་ ཆོས་སྲིད་གཉིས་ལུ་སྦྱང་བརྩོན་འབད་ཞིནམ་ལས་ ་སྤོ་རོ་དཔོན་སློབ་མཛད་ཡོདཔ་དང་། མཁན་ཆེན་སྐུ་བགྲེས་པཎ་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་ལས་ བསྙན་རྫོགས་ཀྱི་སྡོམ་པ་ཞུ་བའི་སྐབས་ འབྲུག་ཕུན་ཚོགས་ལུ་ མ་འོངས་པའི་ནང་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བཀོད་ནི་གི་རྟེན་འབྲེལ་ཨིན་པས་ཟེར་གསུངསམ་བཞིན་དུ་ མཚན་ཡང་བསྟན་འཛིན་འབྲུག་སྒྲ་ཟེར་གསོལ་ནུག། སྡེ་སྲིད་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ལྕོགས་གྲུབ་ཅན་ཅིག་ཡོདཔ་ལས་ ཀྲོང་གསར་དཔོན་སློབ་སྦེ་ཡང་ཕྱག་ཞུ་ནུག། ད་རུང་ ཀྲོང་གསར་དཔོན་སློབ་ལས་ ཐིམ་ཕུག་རྗོང་དཔོན་གྱི་གོ་གནས་བཞེས་པའི་སྐབས་  སྡེ་སྲིད་བཅུ་གསུམ་པ་ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་གིས་ བཀྲི་ཤིས་ཆོས་རྗོང་ཉམས་བཅོས་ཀྱི་ཕྱག་ལཱ་འགོ་བཙུགས་ཡོདཔ་མི་ཚུ་ སྤྱི་ལོ་ ༡༧༥༩ ས་ཡོས་ཟླཝ་ ༩ པའི་ཚེས་ ༨ ལུ་ ལོ་ངོ་གསུམ་ནང་འཁོད་ལུ་ ཐིམ་ཕུག་རྗོང་གི་ཉམས་བཅོས་བསྒྲུབས་སོ་ནུག། སྤ་རོ་སྟང་ཚང་ལུ་ པཎ་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་མཁན་ཁྲི་ལས་དགོངསམ་ཞུཝ་ད་ འབྲུག་ཕུན་ཚོགས་འདི་ དེའི་སྐབས་སྤ་རོ་དཔོན་སློབ་ཀྱི་གོ་གནས་བཞེས་ཡོདཔ་ལས་ དགོངས་འདུས་རིལ་སྒྲུབ་ལུ་ སྦྱྔིན་བདག་མཛད་ནུག། དེ་འབདཝ་ལས་ སྡེ་སྲིད་འབྲུག་ཕུན་ཚོགས་མཆོག་ པཎ་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་ལས་ བསྙེན་རྗོགས་ཀྱི་སྡོམ་པ་ཞུཝ་ད་ མཚན་་བསྟན་འཛིན་འབྲུག་སྒྲ་ཟེར་གསོལ་ནུག། </big>
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གྱི་མཛད་སྒོ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གསུམ་པ་ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་མཆོག་ སྤྱི་ལོ་ ༡༧༦༣ ཆུ་ལུག་ཟླཝ་དང་པའི་ནང་ དགོངསམ་ཞུཝ་ལས་ སྤ་རོ་དཔོན་སློབ་འབུག་ཕུན་ཚོགས་འདི་ མཁན་ཆེན་ཆོས་རྗེ་ངག་་དབང་ཕྲིན་ལས་དང་ བླ་མ་ཁྲི་པ་གོང་ས་འཇིགས་མེད་སེངྒེ་གི་བསྟུན་གྲོས་ཐོག་ལས་ འབྲུག་གྱི་སྡེ་སྲིད་ཁྲི་རབས་བཅུ་བཞི་པ་སྦེ་ཁྲི་མངའ་གསོལ་ཞུ་ནུག།
+སྡེ་སྲིད་ཁྲི་ཐོག་གྱི་མཛད་རྣམ།</big>
+===== མཆོད་རྟེན་གསར་བཞེངས། =====
+<big>སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གསུམ་པ་ ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་དགོངསམ་ཞུ་བའི་ཤུལ་མ་ སྡེ་སྲིད་ཁྲི་རབས་བཅུ་བཞི་པ་བསྟན་འཛིན་འབྲུག་སྒྲ་གིས་ དཔལ་ལྡན་འབྲུག་པའི་དབུ་འཕང་ལུ་བསྟོད་ཡོདཔ་དང་ མཆོད་རྟེན་མང་རབས་ཅིག་གི་གསེར་བཞེངས་ཀྱི་ཕྱག་ལཱ་ཚུ་འགོ་བཙུགས་ནུག།</big> 
+===== དཔལ་ལྡན་ཤེས་རབ་སེངྒེ་གི་བསྐོ་བཞག། =====
+<big>དབང་འདུས་རྗོང་དཔོན་བསོད་ནམས་ལྷུན་གྲུབ་དང་ མཁན་ཆེན་བགྲེསཔ་པཎ་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་གཉིས་ཀྱིས་སྡེ་སྲིད་ལུ་ཞུ་སྟེ་ དབང་འདུས་གྲྭ་ཚང་ནང་ལུ་སྦེ་ གྲྭ་ཚང་སྐུ་དྲུང་བགྲེསཔ་དཔལ་ཤེས་རབ་སེངྒེ་འདི་ གྲྭ་ཚང་གི་བླམ་གནས་བརྟན་སྦེ་བསྐོ་བཞག་གནང་ནུག། <br>
+
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། ====
+<big>སྡེ་སྲིད་བསྟན་འཛིན་འབྲུག་སྒྲ་མཆོག་ སྤྱི་ལོ་ ༡༧༦༥ ཤིང་བྱ་ཟླཝ་ ༢ པའི་ནང་ལུ་ གློ་བུར་ཀྱི་སྐུ་གཟུགས་བསྙུངས་ཏེ་དྲག་མ་ཚུགསཔ་ལས་ ཐིམ་ཕུག་སེམས་རྟོགས་ཁ་ལུ་བྱོན་ཏེ་ ཡུན་མ་རིངམོ་ཅིག་ཁར་དགོངས་པ་རྗོགས་ནུག། དེའི་སྐབས་ སྡེ་སྲིད་བཅུ་གསུམ་པ་ཤེས་རབ་དབང་ཕྱུག་དང་ མཁན་ཆེན་སྐུ་བགྲེས་བསྟན་འཛིན་ཆོས་རྒྱལ་གཉིས་ གཅིག་ཁར་བཞུགས་ཏེ་ སྡེ་སྲིད་ཁོ་རའི་ཕྱག་ལཱ་ཚུ་ འཕྲོ་མཐུད་དེ་མཛད་གནང་ནུག།</big>
+
 
 
 
