*Empty MediaWiki Message*

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -195,7 +195,7 @@
 ===== མཆོད་རྟེན་གསར་བཞེངས། =====
 <big>སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གསུམ་པ་ ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་དགོངསམ་ཞུ་བའི་ཤུལ་མ་ སྡེ་སྲིད་ཁྲི་རབས་བཅུ་བཞི་པ་བསྟན་འཛིན་འབྲུག་སྒྲ་གིས་ དཔལ་ལྡན་འབྲུག་པའི་དབུ་འཕང་ལུ་བསྟོད་ཡོདཔ་དང་ མཆོད་རྟེན་མང་རབས་ཅིག་གི་གསེར་བཞེངས་ཀྱི་ཕྱག་ལཱ་ཚུ་འགོ་བཙུགས་ནུག།</big> 
 ===== དཔལ་ལྡན་ཤེས་རབ་སེངྒེ་གི་བསྐོ་བཞག། =====
-<big>དབང་འདུས་རྗོང་དཔོན་བསོད་ནམས་ལྷུན་གྲུབ་དང་ མཁན་ཆེན་བགྲེསཔ་པཎ་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་གཉིས་ཀྱིས་སྡེ་སྲིད་ལུ་ཞུ་སྟེ་ དབང་འདུས་གྲྭ་ཚང་ནང་ལུ་སྦེ་ གྲྭ་ཚང་སྐུ་དྲུང་བགྲེསཔ་དཔལ་ཤེས་རབ་སེངྒེ་འདི་ གྲྭ་ཚང་གི་བླམ་གནས་བརྟན་སྦེ་བསྐོ་བཞག་གནང་ནུག། <br>
+<big>དབང་འདུས་རྗོང་དཔོན་བསོད་ནམས་ལྷུན་གྲུབ་དང་ མཁན་ཆེན་བགྲེསཔ་པཎ་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་གཉིས་ཀྱིས་སྡེ་སྲིད་ལུ་ཞུ་སྟེ་ དབང་འདུས་གྲྭ་ཚང་ནང་ལུ་སྦེ་ གྲྭ་ཚང་སྐུ་དྲུང་བགྲེསཔ་དཔལ་ཤེས་རབ་སེངྒེ་འདི་ གྲྭ་ཚང་གི་བླམ་གནས་བརྟན་སྦེ་བསྐོ་བཞག་གནང་ནུག། </big>
 
 ==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། ====
 <big>སྡེ་སྲིད་བསྟན་འཛིན་འབྲུག་སྒྲ་མཆོག་ སྤྱི་ལོ་ ༡༧༦༥ ཤིང་བྱ་ཟླཝ་ ༢ པའི་ནང་ལུ་ གློ་བུར་ཀྱི་སྐུ་གཟུགས་བསྙུངས་ཏེ་དྲག་མ་ཚུགསཔ་ལས་ ཐིམ་ཕུག་སེམས་རྟོགས་ཁ་ལུ་བྱོན་ཏེ་ ཡུན་མ་རིངམོ་ཅིག་ཁར་དགོངས་པ་རྗོགས་ནུག། དེའི་སྐབས་ སྡེ་སྲིད་བཅུ་གསུམ་པ་ཤེས་རབ་དབང་ཕྱུག་དང་ མཁན་ཆེན་སྐུ་བགྲེས་བསྟན་འཛིན་ཆོས་རྒྱལ་གཉིས་ གཅིག་ཁར་བཞུགས་ཏེ་ སྡེ་སྲིད་ཁོ་རའི་ཕྱག་ལཱ་ཚུ་ འཕྲོ་མཐུད་དེ་མཛད་གནང་ནུག།</big>
