/* སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -201,7 +201,22 @@
 <big>སྡེ་སྲིད་བསྟན་འཛིན་འབྲུག་སྒྲ་མཆོག་ སྤྱི་ལོ་ ༡༧༦༥ ཤིང་བྱ་ཟླཝ་ ༢ པའི་ནང་ལུ་ གློ་བུར་ཀྱི་སྐུ་གཟུགས་བསྙུངས་ཏེ་དྲག་མ་ཚུགསཔ་ལས་ ཐིམ་ཕུག་སེམས་རྟོགས་ཁ་ལུ་བྱོན་ཏེ་ ཡུན་མ་རིངམོ་ཅིག་ཁར་དགོངས་པ་རྗོགས་ནུག། དེའི་སྐབས་ སྡེ་སྲིད་བཅུ་གསུམ་པ་ཤེས་རབ་དབང་ཕྱུག་དང་ མཁན་ཆེན་སྐུ་བགྲེས་བསྟན་འཛིན་ཆོས་རྒྱལ་གཉིས་ གཅིག་ཁར་བཞུགས་ཏེ་ སྡེ་སྲིད་ཁོ་རའི་ཕྱག་ལཱ་ཚུ་ འཕྲོ་མཐུད་དེ་མཛད་གནང་ནུག།</big>
 
 
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅོ་ལྔ་པ་འབྲུག་བསྟན་འཛིན་གྱི་མཛད་རྣམ། ༼༡༧༦༥-༡༧༦༨༽ ===
+==== སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མའི་མཛད་རྣམ། ==== 
+<big>སྡེ་སྲིད་བཅོ་ལྔ་པ་འབྲུག་བསྟན་འཛིན་འདི་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་ སྨད་ཝང་ལུ་སྐུ་འཁྲུངས་ནུག། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ སྒར་ལྟོའི་གྲས་ཁར་བཅའ་མར་གཏོགས་ཏེ་ འགན་ཁུར་ག་ཅི་ར་ཕོག་རུང་ འགན་ཁུར་འབག་ཚུགས་པའི་ཕོ་ ལྕོགས་གྲུབ་ཅན་ཅིག་ཨིན་པས། དེ་འབད་ནི་འདི་གིས་ སྡེ་སྲིད་འབྲུག་བསྟན་འཛིན་མཆོག་ ཆོས་སྲིད་ཀྱི་ལཱ་ཚུ་ལུ་ ཉམས་མྱོང་ཡོད་མི་ཅིག་འབདཝ་ལས་ ཆོས་རྗེ་འབྲུག་པའི་ཏོག་བདག་རྐྱེན་ ཆིབས་བཞོན་པའི་གོ་གནས་དང་ དབང་འདུས་ཕོ་བྲང་རྗོང་དཔོན་སྦེ་གསོལ་ནུག། སྡེ་སྲིདད་བཅུ་གསུམ་པ་ ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་སྡེ་སྲིད་སྦེ་བཞུགསཔ་ད་ འབྲུག་བསྟན་འཛིན་མཆོག་དབང་འདུས་རྗོང་དཔོན་ལས་ སྤུ་ན་ཁའི་རྗོང་དཔོན་སྦེ་གོ་གནས་གནང་ཡོདཔ་ཨིན་མས།<br>
 
+སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་སྒོ། སྡེ་སྲིད་བཅུ་བཞི་པ་འབྲུག་ཕུན་ཚོགས་མཆོག་ སྤྱི་ལོ་ ༡༧༦༥ ཤིང་བྱ་གི་ལོ་ལུ་གཤགས་སོཔ་ལས་ མཁན་ཆེན་ཆོས་རྗེ་ངག་དབང་ཕྲིན་ལས་དང་ བླམ་ཁྲི་པ་གོང་ས་འཇིགས་མེད་སེངྒེ། དེ་ལས་ བློན་པོ་ཚུ་ཀྱིས་ སྤྱི་ལོ་ ༡༧༦༥ ཤིང་བྱ་གི་ལོ་དེ་ནང་ར་ སྤུ་ན་ཁའི་རྗོང་དཔོན་འབྲུག་བསྟན་འཛིན་མཆོག་ ཐིམ་ཕུག་བཀྲི་ཤིས་ཆོས་རྗོང་ནང་ལུ་སྦེ་ འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་བཅོ་ལྔ་པ་སྦེ་ཁྲི་མངའ་གསོལ་ནུག།</big> 
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གྱི་མཛད་རྣམ། ==== 
+===== མཆོད་རྟེན་གསར་བཞེངས། ===== 
+<big>སྡེ་སྲིད་མཆོག་གིས་ སྡེ་སྲིད་བཅུ་བཞི་པ་འབྲུག་ཕུན་ཚོགས་མཆོག་གི་ཕྱག་འགན་ ལྷ་ཁང་དང་མཆོད་རྟེན་བཞེངས་ནིའི་ལཱ་ཚུ་འཕྲོ་མཐུད་དེ་མཛད་ཡོདཔ་དང་། མཆོད་རྟེན་གྱི་རབ་གནས་ཚུ་ཡང་མཛད་གནང་ནུག།</big> 
+===== སྟོན་པའི་སྐུ་བཞེངས་ཡོདཔ། =====
+<big>སྡེ་སྲིད་མཆོག་སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ ལྕོགས་གྲུབ་ཅན་ཅིག་འབདཝ་ལས་ སྡེ་སྲིད་གྱི་ཁྲི་ཐོག་ཁར་བཞུགས་ཏེ་ རྒྱས་ས་ལྟེ་བ་བཀྲ་ཤིས་ཆོས་རྗོང་ལུ་ སངས་རྒྱས་ཤཱཀྱ་ཐུབ་པ་ དགུང་ལོ་བཅུ་གཉིས་པའི་སྐུ་ཚད་ བོད་ཀྱི་ལྷ་ས་ ར་ས་འཕྲུལ་སྣང་ལུ་བཞུགས་མི་ཇོ་བོའི་སྐུ་ཚད་ཀྱི་གསེར་སྐུ་ཚུ་ཟླཝ་གཅིག་ནང་བཞེངས་གནང་ནུག།</big> 
+===== བཀའ་འགྱུར་གསར་བཞེངས། =====
+<big>བོད་ཀྱི་མཚལ་པར་མ་ལུ་དཔེ་འགབ་སྟེ་ སྤྱི་ལོ་ ༡༧༦༧ མེ་ཕག་ཟླཝ་ ༡༡ པ་ལས་འགོ་བཙུགས་ཏེ་ འབྲུག་རྒྱལ་ཁབ་ནང་ བཀའ་འགྱུར་གསར་བཞེངས་གནང་ཡོདཔ་དང་། དེའི་སྐབས་ ཡི་གུ་འབྲི་མི་ཡང་ ཡི་གུ་མཁན་ཚུ་ལས་ཡིག་རྒྱུགས་བཞེངས་ཏེ་ མི་གྲངས་ལྔ་བཅུ་ཙམ་གྱིས་བཞེངས་ནུག། རྗེ་ཡོན་ཏན་མཐའ་ཡས་ཀྱིས་འགོ་འདྲེན་འཐབ་སྟེ་ ཞུན་དག་གཙོ་བོ་དགེ་བའི་བཤེས་གཉེན་བསྟན་འཛིན་རྣམ་རྒྱལ་གྱིས་མཛད་ཡོདཔ་དང་། བརྡ་སྤྲོད་མཁན་བདུན་ཙམ་ཅིག་གིས་ ཞུན་དག་ཏོག་ཏོ་སྦེ་འབད་ཡོདཔ་ལས་ དེའི་རབ་གནས་ཡང་ བླམ་ཁྲི་པ་འཇིགས་མེད་སེང་གེ་དང་ མཁན་ཆེན་ཆོས་རྗེ་ངག་དབང་ཕྲིན་ལས། སྡེ་སྲིད་སྐུ་བགྲེས་ཆོས་རྒྱལ་ཤེས་རབ་དབང་ཕྱུག་ཚུ་ཞུ་སྟེ་མཛད་གནང་ནུག།</big>
+===== སྐུ་འདྲ་གསར་བཞེངས། =====
+<big>སྡེ་སྲིད་མཆོག་གིས་ འཕགས་པ་ཐུགས་རྗེ་ཆེན་པོ་ཕྱག་བཞི་འབད་མི་ཅིག་ ཟངས་ལས་བཞེངས་ཡོདཔ་དང་ གུ་རུ་མཚན་བརྒྱད་ཀྱི་སྐུ་ཐང་ཡང་བཞེངས་གནང་ནུག། རྗེ་ཡོན་ཏན་མཐའ་ཡས་མཆོག་གིས་ དེ་ཚུ་གུར་གསེར་གདུང་ཆེན་མོ་བཞེངས་ནིའི་ནང་་འགོ་འདྲེན་མཛད་ནུག།</big> 
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ། ==== 
+<big>སྤྱི་ལོ་ ༡༧༦༨ ས་བྱི་ཟླཝ་ ༡༡ པའི་གནམ་སྒང་ལུ་ སྡེ་སྲིད་འབྲུག་བསྟན་འཛིན་མཆོག་ རྒྱལ་ཁབ་དང་མི་སེར་ལུ་ཕན་པའི་ཕྱག་ལཱ་མང་རབས་ཅིག་མཛད་པའི་མཐའ་མར་ དགོངསམ་རྗོགས་སོ་ནུག།</big>
 
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
