--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -218,6 +218,21 @@
 ==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ། ==== 
 <big>སྤྱི་ལོ་ ༡༧༦༨ ས་བྱི་ཟླཝ་ ༡༡ པའི་གནམ་སྒང་ལུ་ སྡེ་སྲིད་འབྲུག་བསྟན་འཛིན་མཆོག་ རྒྱལ་ཁབ་དང་མི་སེར་ལུ་ཕན་པའི་ཕྱག་ལཱ་མང་རབས་ཅིག་མཛད་པའི་མཐའ་མར་ དགོངསམ་རྗོགས་སོ་ནུག།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅུ་དྲུག་པ་བསོད་ནམས་ལྷུན་གྲུབ་ཀྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ==== 
+<big>སྡེ་ཁྲི་བཅུ་དྲུག་པ་ བསོད་ནམས་ལྷུན་གྲུབ་འདི་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་སྦེད་སྨད་ཁྱུང་སུ་སྡིངས་ལུ་སྐུ་འཁྲུངས་ཡོདཔ་དང་ མཚན་ཞི་དར་ཟེར་གསོལ་ནུག། ཁོ་གིས་ པཎ་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་ལས་ དགེ་ཚུལ་གྱི་སྡོམ་པ་ཞུ་བའི་ཤུལ་ལས་ མཚན་བསོད་ནམས་ལྷུན་གྲུབ་ཟེར་དར་ནུག། སྡེ་སྲིད་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ འབྲུག་པའི་སྒོར་བཞུགས་ཏེ་ འགན་ཁུར་ལེ་ཤ་ཅིག་ར་བཞེས་ཡོདཔ་མ་ཚད་ གོང་ས་མི་ཕམ་དབང་པོའི་ཕྱག་སྒརཔ་གི་གྲངས་སུ་ཡང་བཅའ་མར་གཏོགས་ནུག། དེའི་ཚེ་ གོང་ས་མཆོག་ལུ་ཕྱག་ལེགས་ཤོམ་སྦེ་ཞུཝ་ལས་ ལྕོགས་གྲུབ་ཅན་གྱི་གྲངས་སུ་ཚུད་ཡོདཔ་དང་ རིམ་གྱིས་སྦེ་ གོ་གནས་སྦོམ་ཚུ་ཡང་བཞེས་གནང་ནུག། གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ གསེར་ཁྲི་གུར་བཞུགསཔ་ད་ ཁོ་གི་ལྕོགས་གྲུབ་ལུ་གཟིགས་ཏེ་ངལ་རངས་ཡོདཔ་ལས་ གཞུང་མགྲོན་གཉེར་གྱི་གོ་གནས་གནང་ཡོདཔ་ཨིན་པས།</big>
+==== ཀྲོང་གསར་དཔོན་སློབ་དང་ དབང་འདུས་ཕོ་བྲང་རྫོང་དཔོན་གྱི་གོ་གནས་བཞེས་པའི་སྐོར། ==== 
+<big>གཞུང་མགྲོན་གཉེར་གྱི་ཕྱག་འགན་ལེགས་ཤོམ་སྦེ་འབག་ཚུགས་ནི་འདི་གིས་ ཀྲོང་གསར་དཔོན་སློབ་དང་ དབང་འདུས་རྫོང་དཔོན་གྱི་གོ་གནས་བཞེས་གནང་ནུག། ཁོ་ར་ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་གོ་གནས་བཞེས་བཞུགས་པའི་སྐབས་ མཁན་ཆེན་ཁྲི་རབས་བཅུ་པ་པཎ་ཆེན་བསྟན་འཛིན་ཆོས་རྒྱལ་མཆོག་ ཀྲོང་གསར་ལུ་གདན་འདྲེན་ཞུ་སྟེ་ གྲྭ་ཚང་འགོ་དང་པ་གཞི་བཙུགས་གནང་ནུག། དེའི་ཤུལ་མ་ དབང་འདུས་ཕོ་བྲང་རྫོང་དཔོན་གྱི་ཕྱག་འགན་བཞེས་བཞུགས་པའི་སྐབས་ ལ་དྭགས་ཀྱི་རྒྱལ་བློན་གཉིས་ཀྱི་བར་ན་ མ་འགྲིགསཔ་ཡོད་མི་འདི་གི་ནང་འགྲིག་བཟོ་བར་ འབྲུག་གཞུང་གི་སྐུ་ཚབ་སྦེ་རྫོང་དཔོན་བཏངམ་ལས་ སྡེ་སྲིད་ཀྱི་ཐུགས་དགོངས་དང་འཁྲིལ་ཏེ་ཕྱག་ཞུ་ནུག། ཧེ་མ་ སྡེ་སྲིད་འབྲུག་རབ་རྒྱས་ཀྱི་སྐབས་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་དང་གསུང་སྤྲུལ་ལ་སོགས་པའི་བར་ན་ སྲི་ངན་བྱུང་ཡོད་མི་འདི་ མ་ཞི་བར་ཡོདཔ་ལས་   མི་ངན་ཚུ་གིས་ཞབས་དྲུང་ཐུགས་སྤྲུལ་དང་པ་ འཇིགས་མེད་གྲགས་པ་ལུ་ ཟས་ངན་དྲངས་པའི་རྐྱེན་གྱིས་ སྐུ་བསྙུངས་མི་འདི་དྲག་མ་ཚུགས་པར་ ཐུགས་བསུན་ཏེ་འབྱོན་པའི་སྐབས་ དབང་འདུས་སྒང་སྟེང་ཐང་ཁ་ལུ་ཕེབས་ད་ རྫོང་དཔོན་བསོད་ནམས་ལྷུན་གྲུབ་ཀྱིས་བསྙེན་བཀུར་ཚུ་ཞུ་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་པ། ==== 
+<big>སྡེ་སྲིད་ཁྲི་རབས་ ༡༥ པ་འབྲུག་བསྟན་འཛིན་འདི་ གློ་བུར་དུ་དགོངས་པ་རྫོགས་སོཔ་ལས་ སྤྱི་ལོ་ ༡༧༦༩ ཟླཝ་ ༡༢ པའི་ཚེས་ ༤ ལུ་གསོལ་ཐབ་སྤུ་ཁ་ལུ་བཞུགསཔ་ད་ བླ་མ་ཁྲི་པ་འཇིགས་མེད་སེང་གེ་དང་དགེ་འདུན་གྲྭ་ཚང་། དེ་ལས་ ལྷན་རྒྱས་ཚུ་འཛོམས་ཐོག་ལས་ དབང་རྫོང་བསོད་ནམས་ལྷུན་གྲུབ་འདི་ སྡེ་སྲིད་ཁྲི་རབས་ ༡༦ པའི་ཁྲི་ཐོག་ཁར་མངའ་གསོལ་ཞུ་ནུག།</big> 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བཞུགས་པའི་སྐབས་ཀྱི་མཛད་པ། ==== 
+<big>སྡེ་སྲིད་ཞི་དར་ལ་འདི་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་ཞིནམ་ལས་ མཛད་པ་མང་རབས་ཅིག་མཛད་ཡོད་པའི་ནང་ལས་ དང་པ་ར་ སྡེ་སྲིད་ཁོ་ར་དབང་རྫོང་པ་སྦེ་བཞུགས་པའི་སྐབས་ དབང་འདུས་སྒོ་ཁང་གི་རྟེན་ གསར་བཞེངས་ཀྱི་ལཱ་འཕྲོ་ལུས་ཡོད་མི་འདི་ མཇུག་བསྡུ་གནང་ནུག། འདི་བཟུམ་སྦེ་ར་ སྡེ་སྲིད་མཆོག་གིས་ བསྟན་པ་དང་སེམས་ཅན་གྱི་དོན་ལུ་ཐུགས་བཞེས་གནང་སྟེ་ ཞབས་དྲུང་རིན་པོ་ཆེའི་མཐོང་གྲོལ་ཆེན་མོ་ རྒྱ་ཚད་འདོམ་བཅོ་ལྔ་དང་ མཐོ་ཚད་འདོམ་བཅོ་ལྔ་འབད་མི་ཅིག་ གསར་བཞེངས་མཛད་གནང་ཡོདཔ་མ་ཚད་ གུ་རུ་མཚན་བརྒྱད་དང་ ཞབས་དྲུང་ཕུན་སུམ་ཚོགས་པའི་གོས་ཐང་བཅས་ གོས་ཐང་ཉེར་གསུམ་ གསར་བཞེངས་དང་རབ་གནས་ཚུ་མཛད་གནང་ནུག། དེ་མ་ཚད་ བདག་ཅག་གི་སྟོན་པ་སངས་རྒྱས་ཤཱཀྱ་ཐུབ་པ་དང་ སངས་རྒྱས་སྟོང་རྩ། གུ་རུ་མཚན་བརྒྱད་ཀྱི་སྐུ་རྟེན་ཚུ་ ལུགས་སུ་བླུགས་ཏེ་བཞེངས་གནང་ཞིནམ་ལས་ དགེ་འདུན་གྱི་ཕྱག་ལུ་རྩིས་ཕུལ་ནུག། སྡེ་སྲིད་བསོད་ནམས་ལྷུན་གྲུབ་ཀྱིས་ སྤུ་ན་རྫོང་གི་ནང་རྟེན་ཚུ་ཉམས་བཅོས་དང་གསར་བཞེངས། གསེར་སྒྲོན་ནི་ལ་སོགས་པའི་བསྟན་འགྲོའི་དོན་ལུ་ ཕྱག་ལཱ་མཛད་གནང་ནུག། ཧེ་མ་ པཎ་ཆེན་ནགས་ཀྱི་རིན་ཆེན་གྱི་བཞུགས་གནས་ཅིག་ཨིན་མི་ བསོད་ནམས་དགའ་ཚལ་ཟེར་མི་འདི་ འཛམ་གླིང་དགའ་ཚལ་ཟེར་བའི་གཙུག་ལག་ཁང་ རྟེན་དང་བརྟེན་པ་བཅས་གཞི་བཙུགས་མཛད་གནང་ནུག། སྤྱི་ལོ་ ༡༧༧༢ གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་བཞུགས་པའི་སྐབས་ བཀྲ་ཤིས་ཆོས་རྫོང་མེ་མཆོད་ཐེངས་གཉིས་པ་བཞེསཔ་དང་ དེའི་བསྐྱར་བཞེངས་ཡང་ སྡེ་སྲིད་ཁོ་གིས་མཛད་གནང་ནུག།</big>
+ 
+==== སྐྱབས་ཡུལ་གོངམ་ལུ་བསྙེན་བཀུར་གྱི་མཛད་པ། ==== 
+<big>ཞབས་དྲུང་ཐུགས་སྤྲུལ་དང་པ་འཇིགས་མེད་གྲགས་པ་མཆོག་ དགོངས་པ་རྫོགས་ཞིནམ་ལས་ ཧེ་མ་སྡེ་སྲིད་མཆོག་ དབང་འདུས་རྫོང་དཔོན་སྦེ་བཞུགས་པའི་སྐབས་ ཁ་ཆེམས་བཞག་ཡོདཔ་བཞིན་དུ་ བསྙེན་བཀུར་ཞུ་ནིའི་དོན་ལུ་ བོད་ལུ་བྱོན་ཞིནམ་ལས་ དེའི་ཡང་སྲིད་འདི་གདན་འདྲེན་ཞུཝ་ད་ འབྲུག་ལུ་གཏང་མ་བཏུབ་ལས་ མི་དབང་སྡེ་སྲིད་མཆོག་གིས་ བཀའ་སྲུང་དང་ཆོས་སྐྱོང་གི་གདོང་ བོད་ཕྱོགས་ལུ་བསྒྱུརཝ་ལས་ མཐར་ཐུག་ལུ་གདན་འདྲེན་ཞུ་ཚུགས་ནུག། འབྲུག་ལུ་ཕེབས་ཞིནམ་ལས་ ཁྲི་མངའ་གསོལ་མཛད་ཡོདཔ་མ་ཚད་ རྗེ་ཀུན་དགའ་རྒྱལ་མཚན་དང་ རྗེ་ཡོན་ཏན་མཐའ་ཡས་གཉིས་ལུ་ སྐུ་ཡོན་ཚུ་ཕུལ་བཅུག་ནུག། སྡེ་སྲིད་ཀྱི་མཛད་པ་མཐའ་མ། དབང་ཚད་ལོག་སྤྱོད་དང་ཕྱི་རྒྱལ་དང་མཐུན་འབྲེལ། <br>
+
+སྡེ་སྲིད་མཆོག་ སྲིད་དབང་གིས་མ་ཚིམས་པར་ ཆོས་ཁྲིམས་ཀྱི་དབང་ཚད་ཡང་བཞེས་ཏེ་ ཧེ་མ་བླམ་གནས་བརྟན་ཤེས་རབ་སེང་གེ་འདི་ རྡོར་སློབ་ཀྱི་ཁྲི་ཐོག་ཁར་ སྡེ་སྲིད་ཁོ་གིས་བསྐོ་བཞག་མཛད་ཡོད་རུང་ ཤུལ་ལས་ ཁོ་ར་གིས་ར་ ཁྲི་ལས་ཕབ་བཏང་ནུག། དེ་མ་ཚད་ རྡོར་སློབ་འདི་དང་དབྱངས་སློབ་གཉིས་གནས་སོར་བཏང་སྟེ་ བརྩི་བཀུར་མེད་པའི་མཛད་འཕྲིན་ལུ་བརྟེན་ཏེ་ གྲྭ་སྡེ་དང་སྲིད་ཀྱི་ལུགས་སེམས་ལུ་མ་བབས་པའི་གནས་སྟངས་ཅིག་ལུ་གྱུར་ནུག། དེ་མ་ཚད་ ཁོ་གི་ཕྲག་དོག་གི་རྐྱེན་ལུ་བརྟེན་ཏེ་ ཀུཆ་བི་ཧར་དང་གཅིག་ཁར་དམག་འཁྲུག་བྱུང་ཡོད་རུང་ ཁོ་གིས་ མ་འོངས་མཐུན་འབྲེལ་ལུ་དགོངས་ཏེ་ གོརྵའི་རྒྱལ་ཁབ་དང་ བལ་པོ་ཚུ་དང་མཉམ་མཐུན་འབྲེལ་བཟོ་གནང་རུང་ དམག་འཁྲུག་ལེ་ཤ་ཅིག་ར་བྱུང་ནུག།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
