/* སྐྱབས་ཡུལ་གོངམ་ལུ་བསྙེན་བཀུར་གྱི་མཛད་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -233,6 +233,45 @@
 
 སྡེ་སྲིད་མཆོག་ སྲིད་དབང་གིས་མ་ཚིམས་པར་ ཆོས་ཁྲིམས་ཀྱི་དབང་ཚད་ཡང་བཞེས་ཏེ་ ཧེ་མ་བླམ་གནས་བརྟན་ཤེས་རབ་སེང་གེ་འདི་ རྡོར་སློབ་ཀྱི་ཁྲི་ཐོག་ཁར་ སྡེ་སྲིད་ཁོ་གིས་བསྐོ་བཞག་མཛད་ཡོད་རུང་ ཤུལ་ལས་ ཁོ་ར་གིས་ར་ ཁྲི་ལས་ཕབ་བཏང་ནུག། དེ་མ་ཚད་ རྡོར་སློབ་འདི་དང་དབྱངས་སློབ་གཉིས་གནས་སོར་བཏང་སྟེ་ བརྩི་བཀུར་མེད་པའི་མཛད་འཕྲིན་ལུ་བརྟེན་ཏེ་ གྲྭ་སྡེ་དང་སྲིད་ཀྱི་ལུགས་སེམས་ལུ་མ་བབས་པའི་གནས་སྟངས་ཅིག་ལུ་གྱུར་ནུག། དེ་མ་ཚད་ ཁོ་གི་ཕྲག་དོག་གི་རྐྱེན་ལུ་བརྟེན་ཏེ་ ཀུཆ་བི་ཧར་དང་གཅིག་ཁར་དམག་འཁྲུག་བྱུང་ཡོད་རུང་ ཁོ་གིས་ མ་འོངས་མཐུན་འབྲེལ་ལུ་དགོངས་ཏེ་ གོརྵའི་རྒྱལ་ཁབ་དང་ བལ་པོ་ཚུ་དང་མཉམ་མཐུན་འབྲེལ་བཟོ་གནང་རུང་ དམག་འཁྲུག་ལེ་ཤ་ཅིག་ར་བྱུང་ནུག།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅུ་བདུན་པ་ ཀུན་དགའ་རིན་ཆེན་གྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ།	 ====
+<big>སྡེ་སྲིད་མཆོག་ དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག་ གཡུས་རུད་པའི་ས་ལུ་འཁྲུངས་ཏེ་ མཚན་ཀུན་དགའ་རིན་ཆེན་ཟེར་གསོལ་ནུག། ཀུན་དགའ་རིན་ཆེན་ཁོ་ར་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ གྲྭ་ཚང་འདུས་སྡེ་ནང་བཞུགས་ཡོདཔ་ཨིན་པས། དེའི་ཚེ་སྐུ་གཟུགས་ཆུང་ཀུ་སྦེ་ཡོདཔ་མ་ཚད་ འཁྲུངས་ཡུལ་རུད་པའི་ས་ལས་འབད་ནི་འདི་གིས་ མཚན་ལུ་རུད་ཅུང་ཟེར་ཡང་ཞུ་སྲོལ་དར་ནུག། རུད་ཅུང་པ་ཁོ་ར་ གྲྭ་ཚང་ནང་བཞུགས་པའི་སྐབས་ རིག་གནས་བཅུ་དང་ཆོ་ག་ཕྱག་ལེན། དེ་ལས་ དཔལ་ལྡན་འབྲུག་པའི་སྒྲིག་ལམ་ཆོས་གསུམ་གྱི་ཤེས་ཡོན་ཚུ་ མཐར་ཕྱིན་ཡོདཔ་མ་ཚད་ ཕྱག་འགན་ཡང་རིམ་གྱིས་སྦེ་བཞེས་གནང་སྟེ་ མཚན་ཉིད་སློབ་དཔོན་གྱི་ཕྱག་འགན་ཡང་བཞེས་གནང་ནུག། དེ་བསྒང་ སྡེ་སྲིད་བསོད་ནམས་ལྷུན་གྲུབ་ཀྱིས་ ཆོས་ཀྱི་སྒྲིག་ཁྲིམས་ལུ་ཡང་ལགཔ་རྐྱབ་ལས་ མཁན་སློབ་ཚུ་ དབང་ཚད་ག་ནི་ཡང་མེདཔ་བཟོ་མི་ལུ་གཟིགས་ཏེ་ མཚན་ཉིད་སློབ་དཔོན་མཆོག་ཡངཞན་པ་ལོག་ཡོད་རུང་སྡེ་སྲིད་དང་མཚན་སློབ་གཉིས་ ཧེ་མ་གྲྭ་ཚང་ནང་བཞུགས་པའི་སྐབས་ཀྱི་ཆོས་གྲོགས་ཅིག་འབད་ནི་འདི་གིས་ སྡེ་སྲིད་བསོད་ནམས་ལྷུན་གྲུབ་འདི་ རྒྱ་དམག་གི་གདོང་ལེན་ལུ་མ་བྱོན་པའི་ཧེ་མ་ མཚན་སློབ་དང་གཅིག་ཁར་བསྟུན་གྲོས་མཛདཔ་ད་ མཚན་སློབ་མཆོག་གིས་ སྡེ་སྲིད་ཁོ་ར་དམག་ལུ་བྱོན་པ་ཅིན་ལེགས་ཤོམ་འོང་ཟེར་ཞུཝ་ལས་ སྡེ་སྲིད་ཀྱི་སྐུ་ཚབ་སྦེ་ མཚན་སློབ་བཏོན་ཏེ་བཞག་བཞགཔ་ཨིན་པས།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་སྐོར། ====
+<big>མཚན་ཉིད་སློབ་དཔོན་ཀུན་དགའ་རིན་ཆེན་གྱིས་གསུངསམ་བཞིན་དུ་ སྡེ་སྲིད་ཁྲི་རབས་བཅུ་དྲུག་པ་བསོད་ནམས་ལྷུན་གྲུབ་ སྤྱི་ལོ་ ༡༧༧༣ གནམ་ལོ་ཆུ་སྦྲུལ་མཇུག་བསྡུ་ཁམས་ཅིག་ཁར་ རྒྱ་དམག་གི་གདོང་ལེན་ལུ་བྱོན་ཡོད་རུང་ རྒྱ་དམག་ལས་ཕམ་སོཔ་ལས་ གཞུང་གིས་སྡེ་ཁྲི་ལས་ཕབ་ཡོདཔ་དང་། སྤྱི་ལོ་ ༡༧༧༤ གི་ལོ་འགོ་བཙུགས་ཁམས་ལུ་ མཚན་ཉིད་སློབ་དཔོན་ཀུན་དགའ་རིན་ཆེན་མཆོག་ ཁྲི་སྤྲུལ་འཇིགས་མེད་སེང་གེ་གིས་བཀའ་དང་འཁྲིལ་ སྡེ་ཁྲི་ལུ་བྱོན་གནང་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>སྤྱི་ལོ་ ༡༧༧༤ ལུ་མཚན་སློབ་མཆོག་ སྡེ་པའི་ཁྲི་ཐོག་ལུ་བྱིན་པའི་ཤུལ་ལུ་ དང་པ་ར་ ཧེ་མ་ཕྱི་གཞུང་དང་གཅིག་ཁར་སྟབས་མ་བདེཝ་ཡོད་མི་འདི་སེལ་ཐབས་ལུ་ ཀུན་གཟིགས་པཎ་ཆེན་སྐུ་འཕྲེང་དྲུག་པ་ དཔལ་ལྡན་ཡེ་ཤེས་ལུ་ ཕྱི་གཞུང་དང་གཅིག་ཁར་ མཐུན་འབྲེལ་བཟོ་དགོ་པའི་ཞུ་ཡིག་ཕུལཝ་བཞིན་དུ་ པཎ་ཆེན་མཆོག་གིས་ཡང་ རྒྱ་གར་ཀ་ལི་ཀ་ཏ་ལུ་བྱོན་ཞིནམ་ལས་ འབྲུག་གཞུང་གི་ ཧེ་མ་ཀུཆ་བི་ཧར་གྱི་རྒྱལ་པོ་སྤུན་གཉིས་བཙན་བཟུང་འབད་ཡོད་མི་འདི་ལོག་གཏང་ནི་དང་ རྒྱ་གཞུང་གིས་དབང་མི་ འབྲུག་གི་ས་ཁོངས་ཚུ་ཡང་ལོག་འབྲུག་གཞུང་ལུ་ རྩིས་སྤྲོད་འབད་དགོཔ་སྦེ་ཡོད་མི་འདི་ གཞུང་གཉིས་ཆ་རའི་ཧོངས་ལས་ཆ་འཇོག་འབད་ཡོདཔ་མ་ཚད་ དེ་དང་གཅིག་ཁར་ དོན་ཚན་བཅུ་ཐམ་འབད་མི་གན་ཡིག་ཅིག་ཡང་ གཏན་འབེབས་བཟོ་སྟེ་ ཕྱག་རྟགས་བཀོད་ཐོག་ལས་ རྒྱ་འབྲུག་གཉིས་ཀྱི་མཐུན་འབྲེལ་བཟོ་གནང་ནུག། དེ་མ་ཚད་ རྒྱ་གཞུང་འདི་ཧེ་མ་ལས་ བོད་དང་གཅིག་ཁར་ཚོང་ལམ་བཟོ་ནིའི་དང་འདོད་ཡོདཔ་ལས་ ཆིངས་ཡིག་འདི་གུར་ཕྱག་རྟགས་གནང་སྟེ་ གཞུང་གཉིས་ཀྱི་བར་ན་མཐུན་འབྲེལ་བཟོ་བའི་ཤུལ་མ་ རྒྱ་གཞུང་ལས་ བོད་ལུ་ཚོང་ལམ་ཕྱེ་བར་འགྱོཝ་ད་ འབྲུག་གཞུང་གི་བསུ་བ་དང་བཅས་ བསུ་ལེན་འབད་ཡོདཔ་མ་ཚད་ ཟླཝ་བཞི་དེ་ཅིག་ འབྲུག་ལུ་བཞུགས་པའི་སྐབས་ཡང་ ཕྱག་ཞུ་ཞུཝ་ལས་ ཧེ་མ་བ་ལྷགཔ་སྦེ་ མཐུན་འབྲེལ་བཟོ་གནང་ནུག། 
+</big>
+==== ནང་འཁྲུག་འཇོམས་པའི་མཛད་རྣམ།	 ====
+<big>	
+སྡེ་སྲིད་མཆོག་གིས་ ཕྱི་གཞུང་དང་གཅིག་ཁར་མཐུན་འབྲེལ་བཟོ་སྟེ་ ཚར་གཅིག་དམག་འཁྲུག་མེདཔ་སྦེ་འགྱོ་ཡོད་རུང་ སྡེ་སྲིད་བསོད་ནམས་ལྷུན་གྲུབ་ཀྱི་ཕྱོགས་གཏོགས་ཚུ་གིས་ ནང་འཁྲུག་ལང་ནི་འགོ་བཙུགས་ནུག། དེ་ཡང་ སྡེ་སྲིད་བགྲེསཔ་བསོད་ནམས་ལྷུན་གྲུབ་ཀྱི་ཕྱོགས་གཏོགས་ཚུ་གིས་ སྤྱི་ལོ ༡༧༧༤ བར་ཁམས་ཅིག་ནང་ སྡེ་སྲིད་བགྲེསཔ་ཡོད་རྫུ་བཏབ་སྟེ་ སེམས་རྟོགས་ཁ་ལུ་སྒར་བཅགས་ཞིནམ་ལས་ གཞུང་དང་གྲྭ་ཚང་འདུས་ཚོགས་ལུ་ ལཱ་ངན་འབད་ནི་འགོ་བཙུགས་ནུག། དེ་ལས་ བླ་མ་ཁྲི་པ་འཇིགས་མེད་སེང་གེ་དང་ སྡེ་སྲིད་གིས་གཙོས་པའི་གཞུང་གི་དམག་སྟོབས་ཅན་ཚུ་གིས་ ནང་འཁྲུག་ཞི་བར་འཇོམས་གནང་ནུག།</big>
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ།	 ====
+	
+<big>སྡེ་སྲིད་ཁོ་གི་སྐབས་ རྒྱ་དམག་དང་ནང་འཁྲུག་ལུ་བརྟེན་ཏེ་ དགེ་འདུན་པའི་ཞལ་གྲངས་མར་ཕབ་འགྱོ་ཡོད་མི་འདི་ ཡར་སེང་འབད་ཐབས་ལུ་ སྤྱི་ལོ་ ༡༧༧༥ ཤིང་ལུག་གི་ལོ་ལུ་ དགེ་སློང་ཞལ་གྲངས་ཉིས་བརྒྱ་ལྷག་ཙམ་ཅིག་ གསར་བཙུགས་མཛད་གནང་སྟེ་ དགེ་འདུན་པའི་སྡེ་ ཉམས་པ་སོར་ཆུད་མཛད་ཡོདཔ་དང་ དགེ་འདུན་འདུས་ཚོགས་ཀྱི་ཕན་ཐབས་ལུ་དམིགས་ཏེ་ བདག་ཅག་གི་སྟོན་པ་ ཤཱཀྱ་ཐུབ་པའི་མཐོང་གྲོལ་གཅིག་ཡང་གསར་བཞེངས་མཛད་གནང་ནུག། འདི་དང་འབྲེལ་ རྗེ་མཁན་ཁྲི་རབས་བཅུ་གསུམ་པ་ རྗེ་ཡོན་ཏན་མཐའ་ཡས་མཆོག་ རྗེ་མཁན་པོའི་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་ཡོདཔ་ལས་ མཁན་ཁྲི་རབས་བཅུ་བཞི་པའི་ཁྲི་ཐོག་ལུ་ བླམ་ངག་དབང་བསྟན་འཛིན་རྣམ་རྒྱལ་མཆོག་ བསྐོ་བཞག་མཛད་གནང་ནུག། མི་དབང་མཆོག་ རྒྱལ་ཁབ་དང་བསྟན་འགྲོ་ལུ་ཕན་པའི་ཕྱག་ལཱ་ རྒྱ་ཆེཝ་སྦེ་མཛད་གནང་བའི་ཤུལ་མ་ སྤྱི་ལོ་ ༡༧༧༦ གནམ་ལོ་མེ་སྤྲེལ་གྱི་ལོ་ལུ་ གདན་ས་སྤུ་ན་ཁ་ལུ་སྦེ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ར་དགོངས་པ་རྫོགས་སོ་ནུག་གོ།
+</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅོ་བརྒྱད་པ་ གོང་ས་འཇིགས་མེད་སེང་གེའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ==== 
+===== སྐུ་འཁྲུངས་ཚུལ་དང་སྐུ་ཡོན་སྦྱང་ཚུལ། དེ་ལས་ ཕྱག་འགན་བཞེས་ཚུལ་གྱི་སྐོར།	 =====
+<big>གོང་ས་འཇིགས་མེད་སེང་གེ་མཆོག་ སྤྱི་ལོ་ ༡༧༤༢ ཆུ་ཁྱི་གི་ལོ་ལུ་ ཀྲོང་གསར་སྦོན་སྦྱིས་ལུ་སྐུ་འཁྲུངས་ནུག། ལོ་ན་ཆུང་ཀུ་ཅིག་ལས་ར་ གོང་ས་མི་ཕམ་དབང་པོའི་སྐུ་སྐྱེས་སྦེ་ ངོས་འཛིན་འཁྲུལ་མེད་དུ་བསྒྲུབས་ཏེ་ གོང་ས་གོང་མའི་གདན་ས་རྟ་མགོ་ལུ་ གདན་འདྲེན་ཞུ་ཞིནམ་ལས་ ཁྲི་མངའ་གསོལ་ཞུ་ནུག། དེ་ལས་ སྐུ་ཡོན་ཚུ་ཡང་ རྗེ་ཤཱཀྱ་རིན་ཆེན་དང་རྗེ་ཡོན་ཏན་མཐའ་ཡས། རྗེ་ཀུན་དགའ་རྒྱ་མཚོ། རྗེ་བསྟན་འཛིན་ཆོས་རྒྱལ་ཚུ་ལས་ བསླབ་སྡོམ་དང་སྨིན་གྲོལ་གྱི་གདམས་ངག། གཞུང་རིག་གནས་བཅུ་ཚུ་ལུ་མཁས་པ་སྦྱངས་ནུག། རིམ་གྱིས་སྦེ་ སྐུ་ན་སྦོམ་ཐལ་ཏེ་ ཕྱག་འགན་བཞེས་ཚུགསཔ་འགྱོ་མི་ལུ་བརྟེན་ཏེ་ སྤྱི་ལོ ༡༧༦༡ པའི་ལྕགས་སྦྲུལ་ལུ་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་དང་པ་ དཔལ་འཇིགས་མེད་སེང་གེ་དགོངས་པ་རྫོགས་ཡོདཔ་མ་ཚད་ སྤྱི་ལོ་ ༡༧༦༢ གི་ལོ་ལུ་ རྒྱལ་སྲས་འཇམ་དཔལ་རྡོ་རྗེ་གི་ཡང་སྲིད་ འབྲུག་སྒྲ་རྣམ་རྒྱལ་ཡང་དགོངས་པ་རྫོགས་སོཔ་ལས་ ཞབས་དྲུང་གི་སྐུ་ཚབ་སྦེ་ བླ་མ་ཁྲི་པའི་ཁྲི་ཐོག་ལུ་བཞུགས་མི་ག་ཡང་མེདཔ་ལས་ སྡེ་སྲིད་ཆོས་རྒྱལ་ཤེས་རབ་དང་ རྗེ་ངག་དབང་ཕྲིན་ལས་གཉིས་ཀྱིས་ གོང་ས་མཆོག་བླ་མ་ཁྲི་པའི་ཁྲི་གཟུང་དགོ་པའི་ཞུ་བ་ཕུལཝ་བཞིན་དུ་ སྤྱི་ལོ་ ༡༧༦༣ ཆུ་ལུག་གི་ལོ་ལུ་ བླ་མ་ཁྲི་པའི་ཁྲི་ཐོག་ལུ་བྱོན་གནང་ནུག། བླམ་ཁྲི་པའི་གོ་གནས་བཞེས་གནང་བའི་ཤུལ་མ་ སྡེ་སྲིད་རིམ་བྱོན་ཚུ་ལུ་ ཆོས་སྲིད་དང་འབྲེལ་བའི་ཕྱག་ལག་ག་ཅི་བཟུམ་ཅིག་ར་གནང་རུང་ དགེ་བའི་བྱ་བ་ལས་མ་ལོག་པར་གནང་དགོ་པའི་བཀའ་སློབ་ཚུ་གནང་ཡོདཔ་མ་ཚད་ རྒྱལ་ཁབ་ནང་ ཧེ་མ་ལས་ཡོད་མི་མཛད་སྒོའི་རིམ་པ་ཚུ་ཡང་གཙོ་བོ་བཟུང་སྟེ་རྒྱལ་ཁབ་སྐྱོང་གནང་ནུག།</big>
+===== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་་མཛད་པ།	 =====
+	
+<big>སྡེ་སྲིད་བཅུ་བདུན་པ་ས་སྐྱོང་མི་དབང་ཀུན་དགའ་རིན་ཆེན་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་ར་གློ་བུར་དུ་གཤགས་སོཔ་ལས་ སྡེ་ཁྲི་གཟུང་མི་མེདཔ་ལས་ རྗེ་མཁན་ཁྲི་རབས་བཅུ་བཞི་པ་བསྟན་འཛིན་རྣམ་རྒྱལ་དང་ གྲྭ་ཚང་ལྷན་རྒྱས་ཀྱི་ཚོགས་པ་ཚུ་འཛོམས་ཐོག་ལས་ བླམ་ཁྲི་པའི་གོ་གནས་བཞེས་བཞུགས་མི་ས་སྐྱོང་མི་དབང་འཇིགས་མེད་སེང་གེ་མཆོག་ སྡེ་སྲིད་བཅོ་བརྒྱད་པའི་ཁྲི་ཐོག་ལུ་ སྤྱི་ལོ་ ༡༧༧༦ གི་ལོ་ལུ་ ཁྲི་མངའ་གསོལ་ཞུ་ནུག། དེའི་ཤུལ་ལས་ ས་སྐྱོང་གི་དྲིན་ཅན་གྱི་རིགས་བདག་ རྒྱལ་བ་ཤཱཀྱ་རིན་ཆེན་གྱི་གདན་ས་ ཕོ་ཇོ་སྡིངས་ཀྱི་གོང་འཕེལ་ལུ་གཟིགས་ཏེ་ རྟ་མགོའི་རྫོང་ཉམས་ཆག་ཤོར་ཡོད་མི་འདི་ རྩ་བ་ལས་ར་གསར་བཞེངས་མཛད་གནང་ནུག། དེ་མ་ཚད་ གདན་ས་བཀྲ་ཤིས་ཆོས་རྫོང་གི་ཀུན་ར་ཡང་ ལེགས་བཅོས་མཛད་དེ་ ཞབས་ཏོག་ཞུ་གནང་ནུག། དེ་བཟུམ་སྦེ་ འབྲུག་གི་རྫོང་དང་ལྷ་ཁང་མགོན་པ། དེ་ལས་ མཆོད་རྟེན་མང་རབས་ཅིག་ ཉམས་བཅོས་དང་གསར་བཞེངས་ཀྱི་ཕྱག་ལཱ་ཚུ་ཡང་མཛད་གནང་ནུག། དེ་དང་གཅིག་ཁར་ སྤྱི་ལོ ༡༧༨༠ གི་ལོ་ལུ་ སྤུངས་ཐང་བདེ་བ་ཆེན་པོའི་ཕོ་བྲང་འདི་རྩ་བ་ལས་ མེ་མཆོད་བཞེས་ཡོད་མི་འདི་ཡང་ རྟེན་དང་བརྟེན་པ་བཅས་གསར་བཞེངས་མཛད་གནང་ནུག།</big>
+===== རྗེ་མཁན་གྱི་ཁྲི་མཁའ་གསོལ་ཞུ་ཡོདཔ། ===== 
+	
+<big>རྗེ་མཁན་ཁྲི་རབས་བཅུ་བཞི་པ་རྗེ་བསྟན་འཛིན་རྣམ་རྒྱལ་མཆོག་ ནང་འཁྲུག་ལུ་བརྟེན་ཏེ་ ཐུགས་ཕམ་བྱུང་བའི་རྐྱེན་གྱིས་ སྤྱི་ལོ་ ༡༧༨༡ ལྕགས་གླང་གི་ལོ་ལུ་ ཁྲི་ཐོག་ལུ་ར་དགོངས་པ་རྫོགས་སོཔ་ལས་ སྒྲ་སློབ་ཀུན་བཟང་རྒྱལ་མཚན་མཆོག་ སྐྱབས་རྗེ་རྗེ་མཁན་ཁྲི་རབས་བཅོ་ལྔ་པའི་ཁྲི་ཐོག་ལུ་ མངའ་གསོལ་མཛད་གནང་ཡོད་རུང་ རང་ལུགས་གནམ་ལོ་ཤིང་འབྲུག་ སྤྱི་ལོ་ ༡༧༨༤ གི་ལོ་ལུ་ སྐུ་གཟུགས་མ་བདེ་བ་ལུ་བརྟེན་ཏེ་ མཁན་ཁྲི་ལས་དགོངས་ཞུ་མཛད་ཞིནམ་ལས་ ཁྲི་ཐོག་ལུ་བཞུགས་མི་མེད་པར་སྡོད་པའི་ནམ་དུས་ལུ་ དཔལ་ཤེས་རབ་སེང་གེ་མཆོག་ ཐིམ་ཕུག་བཀྲ་ཤིས་ཆོས་རྫོང་ནང་གདན་འདྲེན་ཞུ་ཞིནམ་ལས་ རྗེ་མཁན་ཁྲི་རབས་བཅུ་དྲུག་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big> 
+===== ཁྱིམ་ཚང་རྒྱལ་ཁབ་དང་མཐུན་འབྲེལ། ===== 
+	
+<big>འབྲུག་རྒྱལ་ཁབ་འདི་ རྒྱ་གཞུང་དང་བོད་ཀྱི་དོན་ལུ་ ཚོང་ལམ་བཟུམ་ཅིག་སྦེ་ལག་ལེན་འཐབ་དོ་ཡོདཔ་དང་ སྡེ་སྲིད་འདིའི་སྐབས་ལུ་ཡང་ ཚོང་འབྲེལ་གྱི་དོན་ལུ་ རྒྱ་གཞུང་ལས་བོད་ལུ་འགྱོ་མི་དོ་དམ་གྱིས་གཙོས་པའི་རྒྱ་མི་ལེ་ཤ་ཅིག་ར་འཐོན་དོ་ཡོདཔ་ཨིན་པས། འབྲུག་དང་རྒྱ་གཞུང་གཉིས་ཀྱི་མཐུན་འབྲེལ་འདི་ སྔར་བ་ལྷགཔ་སྦེ་ཡར་རྒྱས་གཏང་ཐབས་ལུ་ ཚོང་འབྲེལ་འཐབ་པར་འགྱོ་མི་ཚུ་ལུ་ སྡེ་སྲིད་མཆོག་གིས་ ཆ་རོགས་དང་གྲོགས་རམ་མཛད་བྱིན་ཡོདཔ་མ་ཚད་ རྒྱ་གཞུང་གིས་འབྲུག་གཞུང་ལུ ཚོང་ལམ་གྱི་ངོས་ལེན་མཛད་དགོ་པའི་ཞུ་བ་ཕུལཝ་བཞིན་དུ་ འབྲུག་གཞུང་གིས་ཡང་ངོས་ལེན་མཛད་ཡོདཔ་ཨིན་མས། འདི་དང་གཅིག་ཁར་ ཧེ་མ་རྒྱ་གཞུང་གིས་ དབང་ཡོད་མི་ འབྲུག་པའི་ས་ཆ་ཚུ་ལོག་བྱིན་དགོཔ་སྦེ་བཟོ་སྟེ་ རྒྱལ་ཁབ་ག་ལུ་ཡང་རྒུད་མ་ཕོགཔ་མ་ཚད་ མཐུན་ལམ་རྒྱུན་སྐྱོང་ལུ་ཡང་ཕན་ཐོགས་སྦོམ་བྱུང་ཚུགས་པའི་མཐུན་ལམ་བཟོ་གནང་ནུག། དེ་མ་ཚད་ མཐུན་འབྲེལ་ཟབ་རྒྱས་ཀྱི་དོན་ལུ་ ཁྱིམ་ཚང་རྒྱལ་ཁབ་ གོརྵའི་རྒྱལ་པོ་ཁྲི་མངའ་གསོལ་ཞུ་ས་ལུ་ཡང་ བཅའ་མར་གཏོགས་གནང་ཡོདཔ་ཨིན་པས།</big> 
+===== བསྟན་པ་ལུ་ཕན་ཐོགས་པའི་མཛད་པ། ===== 
+	
+<big>སྤྱི་ལོ་ ༡༧༨༠ གི་ལོ་ལུ་ སྤུ་ན་ཁ་རྫོང་མེ་མཆོད་བཞེས་མི་འདི་ ལོག་གསར་བཞེངས་མཛདཔ་དང་གཅིག་ཁར་ བཀའ་དྲིན་བླ་ན་མེད་པའི་བདག་ཅག་གི་སྟོན་པ་སངས་རྒྱས་ཤཱཀྱ་ཐུབ་པ་མཆོག་གི་མཛད་རྣམ་རྗེས་དྲན་གྱི་དོན་ལུ་ མཛད་བརྒྱ་དཔག་བསམ་འཁྲི་ཤིང་གི་ལོགས་བྲིས་ གསར་བཞེངས་མཛད་གནང་ནུག། གདན་ས་སྤུངས་ཐང་བདེ་བ་ཆེན་པོའི་ཕོ་བྲང་ནང་ལུ་ ད་ལྟོའི་བར་ན་ཡང་མཇལ་ནི་ཡོད་མི་ སངས་རྒྱས་ཐུབ་པའི་དབང་པོ་གི་མཐོང་གྲོལ་ གསར་བཞེངས་མཛད་མི་གི་རབ་གནས་ཡང་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་གཉིས་པ་ ཆོས་ཀྱི་རྒྱལ་མཚན་དང་ མཁན་སློབ་འདུས་ཚོགས་ལུ་གནང་བཅུག་ནུག། དེ་བཟུམ་སྦེ་ ཀུན་མཁྱེན་པདྨ་དཀར་པོ་གི་བཀའ་འབུམ་ཡོངས་རྫོགས་ཅིག་ གསར་སྐྲུན་གྱི་ཕྱག་ལཱ་ཡང་ དབུ་བཙུགས་མཛད་གནང་ནུག། དེ་དང་འདྲཝ་སྦེ་ ཡང་སྲིད་མང་རབས་ཅིག་གི་ངོས་འཛིན་ཚུ་མཛད་དེ་ ཁྲི་མངའ་གསོལ་མཛད་གནང་ནུག།</big>
+===== སྡེ་སྲིད་ཀྱི་མཛད་པ་མཐའ་མ། ===== 
+	
+<big>ས་སྐྱོང་འཇིགས་མེད་སེང་གེ་མཆོག་སྡེ་ཁྲི་ལུ་བཞུགས་ཏེ་ ལོ་བཅུ་གསུམ་དེ་ཅིག་ལངས་མི་ནང་ཟིང་དང་ བླ་མའི་ཡང་སྲིད་ཚུ་གི་བར་ན་ ཆགས་སྡང་ཡོད་མི་ལུ་ ཐུགས་བསུན་ཏེ་ཞེན་པ་ལོག་པའི་ཁར་ ལྷ་དང་བླ་མའི་ལུང་བསྟན་ཡང་བབས་མི་ལུ་བརྟེན་ཏེ་ སྤྱི་ལོ་ ༡༧༨༩ གི་ལོ་ལུ་ མཁན་ཆེན་ཚུ་གིས་ཞུ་བ་ནན་བསྐྱར་ཞུ་རུང་ གསན་མ་བཏུབ་པར་དགོངས་ཞུ་མཛད་གནང་ནུག།</big> 
+===== དགོངས་ཞུ་མཛད་པའི་ཤུལ་མའི་མཛད་པ། ===== 
+	
+<big>མི་ཕམ་དབང་པོའི་ཡང་སྲིད་ཀྱི་སྐུ་སྐྱེས་འཁྲུལ་བ་མེདཔ་སྦེ་བསྒྲུབས་མི་ གོང་ས་འཇིགས་མེད་སེང་གེ་མཆོག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་པའི་ཤུལ་མ་ ཙཱ་རི་ལུ་གནས་གཟིགས་པར་བྱོན་ཡོདཔ་དང་ ལོག་སྟེ་འབྲུག་ལུ་ཕེབས་ཞིནམ་ལས་ བསམ་ཡས་མཆིམས་ཕུ་ལུ་ ཐུགས་དམ་གནང་བཞུགས་པའི་ཤུལ་མ་ སྤྱི་ལོ་ ༡༧༨༩ དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་སུ་ཐིམ་སོ་ནུག་གོ།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
