/* དགོངས་ཞུ་མཛད་པའི་ཤུལ་མའི་མཛད་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -272,6 +272,21 @@
 	
 <big>མི་ཕམ་དབང་པོའི་ཡང་སྲིད་ཀྱི་སྐུ་སྐྱེས་འཁྲུལ་བ་མེདཔ་སྦེ་བསྒྲུབས་མི་ གོང་ས་འཇིགས་མེད་སེང་གེ་མཆོག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་པའི་ཤུལ་མ་ ཙཱ་རི་ལུ་གནས་གཟིགས་པར་བྱོན་ཡོདཔ་དང་ ལོག་སྟེ་འབྲུག་ལུ་ཕེབས་ཞིནམ་ལས་ བསམ་ཡས་མཆིམས་ཕུ་ལུ་ ཐུགས་དམ་གནང་བཞུགས་པའི་ཤུལ་མ་ སྤྱི་ལོ་ ༡༧༨༩ དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་སུ་ཐིམ་སོ་ནུག་གོ།</big>
 
+
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅུ་དགུ་པ་ས་སྐྱོང་སངས་རྒྱས་བསྟན་འཛིན་གྱི་མཛད་རྣམ། ===
+==== སྐུ་འཁྲུངས་པའི་སྐོར། ==== 
+		
+<big>སྡེ་སྲིད་མཆོག་ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ཝང་སི་སི་ཟེར་སའི་གཡུས་ཚན་ནང་སྐུ་འཁྲུངས་ནུག། ཁོ་འཁྲུངས་པའི་དུས་ལུ་ མཚན་འབྲུག་བསྟན་འཛིན་ཟེར་གསོལ་ཡོད་རུང་ ཤུལ་ལས་ཁོ་ར་ གཏེར་སན་ཤེས་རབ་མེ་འབར་ལས་ དགེ་བསྙེན་ཡོངས་རྫོགསཀྱི་སྡོམ་པ་ཞུ་བའི་ཤུལ་མ་ མཚན་ སངས་རྒྱས་བསྟན་འཛིན་ཟེར་ཞུ་གསོལ་དར་ནུག། དེ་ལས་ སྡེ་སྲིད་མཆོག་སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ ཆོས་རྗེ་འབྲུག་པའི་སྒོར་བཞུགས་ཏེ་ ཆོས་སྲིད་ཀྱི་རྣམ་གཞག་ལུ་ སྦྱང་བ་ཚུད་སོཔ་ལས་ གཞུང་གི་ཕྱག་འགན་མང་ཤོས་ར་བཞེས་གནང་ནུག།</big> 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་བློ་རྒྱུས། 	 ====
+<big>རང་ལུགས་གནམ་ལོ་ས་བྱ་ཟླཝ་ ༡༡ པ་ སྤྱི་ལོ་ ༡༧༨༩ གི་ལོ་ལུ་ སྡེ་སྲིད་འཇིགས་མེད་སེང་གེ་གིས་ ཐུགས་ཐག་རང་བཅད་ཀྱི་ཐོག་ལས་ སྡེ་སྲིད་སྤངས་བའི་ཤུལ་མ་ སྡེ་སྲིད་བགྲེསཔ་བསོད་ནམས་ལྷུན་གྲུབ་ཀྱི་ཕྱོགས་གཏོགས་ཚུ་གིས་ དགེ་འདུན་དམངས་ལུ་ རྒྱབ་སྐྱོར་གནང་དགོ་པའི་ཞུ་བ་ཕུལཝ་ད་ རྗེ་ཤེས་རབ་བསྟན་འཛིན་གྱིས་རྒྱབ་སྐྱོར་མཛད་ནི་ལུ་གསན་མ་བཏུབ་པར་ དབང་འདུས་རྫོང་ལས་ ཟིང་འཁྲུག་ལོང་ནི་འགོ་བཙུགས་ཏེ སྤུངས་རྫོང་པ་སངས་རྒྱས་བསྟན་འཛིན་དང་ ཟིང་འཁྲུག་ཤུགས་སྦེ་ར་ལངས་ནུག། དེའི་སྐབས་ སྡེ་སྲིད་བགྲེསཔ་གི་ཕྱོགས་གཏོགས་ཚུ་ རྒྱལ་ཁ་འཐོབ་མ་ཚུགསཔ་མ་ཚད་ སྡེ་ཁྲི་ལུ་འབྱོན་ཚུགས་མི་ ནུས་ཤུགས་ཅན་ག་ཡང་མེད་མིལུ་བརྟེན་ཏེ་ ཝང་ཚོ་ཆེན་གྱི་རྒས་ཤོས་ཚུ་གིས་ ལོག་ཅི་ར་ཞུ་བ་ཕུལཝ་བཞིན་དུ་ རྗེ་ཤེས་རབ་བསྟན་འཛིན་དང་ དགེ་འདུན་འདུས་ཚོགས་ཀྱིས་ཐུགས་ཐག་བཅད་དེ་ སྤུངས་རྫོང་པ་སངས་རྒྱས་བསྟན་འཛིན་ (འབྲུག་བསྟན་འཛིན་) འདི་ སྤྱི་ལོ་ ༡༧༨༩ གི་ལོ་ལུ་ སྤུ་ན་ཁ་ལུ་སྦེ་ སྡེ་སྲིད་ཁྲི་རབས་བཅུ་དགུ་པའི་ཁྲི་ཐོག་ལུ་ མངའ་གསོལ་ཞུ་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ==== 
+	
+<big>སྤུངས་རྫོངཔ་སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་ལུ་ དང་པ་ར་རྒྱལ་ཁབ་ནང་ འགོ་དཔོན་ཚུ་གི་བར་ན་ ནང་ཟིང་བྱུང་ཡོད་མི་འདི་ ཕྱི་སེལ་རྐྱབ་ཐབས་ལུ་ ཕྱག་འགན་བཞེས་ཏེ་ བསམ་སྦྱོར་མཐུན་མི་འགོ་དཔོན་ཙང་ཙ་མ་གཏོགས་ མ་མཐུན་མི་ཚུ་ག་ར་རྩ་མེད་བཏང་སྟེ་ རྒྱལ་ཁབ་འདི་སྐབས་ཅིག་ཞི་བར་སྐྱོང་ནུག།</big> 
+==== ནང་རྟེན་གསར་བཞེངས་དང་སྦྱིན་བདག་མཛད་པའི་སྐོར། ====
+<big>སྡེ་སྲིད་མཆོག་ གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་ཕེབས་ད་ རྗེ་ཤེས་རབ་སེང་གེ་ལས་ དགེ་བསྙེན་ཡོངས་རྫོགས་ཀྱི་སྡོམ་པ་ཞུ་ཡོདཔ་དང་ དེ་གི་ཤུལ་ལས་ ཧེ་མ་རྗེ་མཁན་ཁྲི་རབས་བཅུ་གསུམ་པ་རྗེ་ཡོན་ཏན་མཐའ་ཡས་ཀྱི་ལཱ་འཕྲོ་ལུས་ཡོད་མི་ སྤུ་ན་ཁ་རྫོང་ནང་གི་གསེར་ཟངས་ཀྱི་བདེ་མཆོག་གི་སྐུ་བསྙེན་འདི་ བརྩོན་ཤུགས་བསྐྱེད་ཐོག་ལས་ མཇུག་བསྡུ་གནང་ནུག། དེ་ལས་ མདོ་སྡེ་བྲག་ལུ་ གསེར་ཟངས་ཀྱི་སྟོན་པའི་སྐུ་འདྲ་ གསར་བཞེངས་མཛད་གནང་ཡོདཔ་དང་ འབྲས་ལ་ལུ་ དུས་གསུམ་སངས་རྒྱས་ཀྱི་སྐུ་འདྲ་ ཐོག་གཉིས་འབད་མི་ཅིག་ཡང་གསར་བཞེངས་མཛད་གནང་ནུག། ཧེ་མ་ལས་ སྤུ་ན་ཁ་རྫོང་དང་གླང་དཀར་པོ་མགོན་པ་ལུ་ བཀའ་འགྱུར་དང་བསྟན་འགྱུར་ཡོད་དེ་འབད་རུང་ ཁ་གསལ་ཏོག་ཏོ་སྦེ་་མེདཔ་ལས སྡེ་པ་ཁོ་གི་སྐབས་ལུ་ བཀའ་འགྱུར་དང་བསྟན་འགྱུར་གཉིས་ཆ་ར་ གསར་བཞེངས་མཛད་གནང་ནུག། དེ་དང་གཅིག་ཁར་ རྗེ་ཤཱཀྱ་རིན་ཆེན་གྱི་གདན་ས་གི་དར་རྒྱས་ལུ་དམིགས་ཏེ་ རྗེ་ཁོ་རའི་ལུང་བསྟན་དང་བཀའ་སློབ་དང་འཁྲིལ་ཏེ་ སྡེ་སྲིད་མཆོག་གིས་ ཕ་ཇོ་སྡིངས་ལུ་སྦེ་ འོག་མིན་གཉིས་པ་ཟེར་བའི་ལྷ་ཁང་ཅིག་ གསར་བཞེངས་མཛད་གནང་ནུག། དེ་མ་ཚད་ སྤྱི་ལོ ༡༧༩༡ པའི་ལོ་ལུ་ སྤྲུལ་སྐུ་ཕྲིན་ལས་རབ་རྒྱས་ལུ་ཞུ་བ་ཕུལཝ་བཞིན་དུ་ བཀའ་འགྱུར་གྱི་ལུང་གནང་བའི་འཕྲོ་ལུ་ར་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་ཕེབས་རནམ་ལས་ སྡེ་སྲིད་མཆོག་གིས་ ལུང་གནང་མི་ལས་གཙོས་པའི་ཆོས་ཞུ་མི་ག་ར་ལུ་ བྱིན་བདག་མཛད་གནང་ནུག།</big>
+==== དགོངས་པ་རྫོགས་པའི་སྐོར། ==== 
+<big>སྡེ་སྲིད་ཁོ་གིས་སྦྱིན་བདག་མཛད་ཐོག་ལས་ བཀའ་འགྱུར་གྱི་ལུང་གནང་ཡོད་པའི་སྐབས་ལུ་ སྡེ་སྲིད་མཆོག་གི་སྐུ་གཟུགས་ལུ་ བསྙུང་གཞི་བཞེས་ཏེ་ སྨན་བཅོས་དང་རིམ་གྲོ་ག་དེམ་ཅིག་འབད་རུང་ ཕན་མ་ཚུགསཔ་ལས་ སྡེ་སྲིད་ལས་དགོངས་ཞུ་མཛད་ཡོདཔ་དང་ ཁོ་གི་ཚབ་ལུ་ སྡེ་སྲིད་ཁོ་རའི་སྐུ་ཚ་བོ་ གཟིམ་དཔོན་བཀྲ་ཤིས་རྣམ་རྒྱལ་ ཁྲི་ཐོག་ལུ་བཏོན་པའི་ཤུལ་མ་ སྤྱི་ལོ་ ༡༧༩༢ གི་ལོ་ལུ་ དགོངས་པ་རྫོགས་སོ་ནུག་གོ།།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
